pull smartling strings

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -150,6 +150,10 @@ af:
     new note: "Nuwe Nota"
     share success: "Jou boodskap is gedeel."
     share error: "Jammer, daar was 'n fout met die deel van jou boodskap. Probeer asb. weer."
+    share: 
+        request: 
+            no_twitter_connection: "Jy het nie 'n geskakelde Twitter rekening nie. Konnekteer asseblief jou rekening op die Verstellings bladsy."
+            no_facebook_connection: "Jy het nie 'n geskakelde Facebook rekening nie. Konnekteer asseblief jou rekening op die Verstellings bladsy."
     google plus: "Google+"
     connect to: "Koppel met jou %{connection} rekening"
     deleted connection: "Koppeling met %{connection} suksesvol verwyder."
@@ -986,8 +990,7 @@ af:
         h3: "YouVersion is Globaal"
         h3 sub: "Beskikbaar in meer as %{language_count} tale wêreldwyd."
         main: "Mense by die miljoene gebruik die Bible App™ om God se Woord deel van hul daaglikse lewens te maak. Laai die gratis app af om toegang tot jou boekmerke, notas en leesplanne van enige plek af te verkry. Geniet honderde weergawes, insluitende klank, alles op jou mobiele toestel."
-        button h4: "Gaan na Bybel.com/app"
-        button h4 sub: "Op Jou Mobiele Toestel"
+        button h4: "Gaan na Bible.com<br>op jou Draagbare toestel"
         download now: "Laai Die Bybel App Nou Af"
         what people: "Wat mense te sê het oor die gratis Bybel app..."
         t1: "Ek het altyd die Woord."
@@ -999,6 +1002,7 @@ af:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ af:
             tracker title: "Kersstorie Navolger"
             twitter text: "Kyk hoe die wêreld lees aangaande die geboorte van Jesus. Deel die Kersverhaal navolger @YouVersion: https://www.bible.com/christmas"
             facebook text: "Deel die Kersverhaal Navolger soos mense rondom die wêreld aangaande die geboorte van Jesus lees.  In die Kerk of by die huis, naby mense waarvoor ons lief is of tydens 'n stil oomblik alleen, staan ons stil om die wonder van God se liefde vir ons te oordink."
+            summary: "Gedurende Desember 2014, is dit hoe dit gelyk het om te sien hoe die wêreld lees van die geboorte van Jesus."
             verse: "<sup>10</sup> Maar die Engel het vir hulle gesê:<br>“Moenie bang wees nie. Ek bring vir julle goeie nuus wat groot blydskap vir alle mense sal bring. <sup>11</sup> Daar is vandag in die stad van Dawid vir julle 'n Verlosser gebore; Hy is die Gesalfde Een, die Here.&quot;"
             read more: "Lees die fantastiese Kersverhaal"
             read about: "Lees van die geboorte van Jesus."
             totals since: "YouVersion totale sedert 1 Desember, 2014:"
+            totals during: "YouVersion totale gedurende Desember 2014"
             total installs: "Totale installerings op \"smartfone\" en tablette"
             download: "Laai die gratis Bybel App af"
             versions: "Meer as %{version_count} vertalings in %{language_count} tale"
