--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -150,6 +150,10 @@ ar:
     new note: "إنشاء ملاحظة"
     share success: "تم مشاركة رسالتك."
     share error: "عفوا، هناك خطأ في مشاركة رسالتك. من فضلك حاول مرة أخرى."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "جوجل+"
     connect to: "اتصل بحسابك %{connection}"
     deleted connection: "تم بنجاح ازالة اتصالك مع %{connection}."
@@ -994,8 +998,7 @@ ar:
         h3: "YouVersion عالمي"
         h3 sub: "متوفر في أكثر من %{language_count} لغة حول العالم."
         main: "عشرات الملايين من الأشخاص يستخدمون تطبيق الكتاب المقدس &trade، ليجعلوا كلمة الله جزء من حياتهم اليومية. حمل التطبيق مجانا ليكون لك القدرة علىالوصول ألي اشاراتك المرجعية، الملاحظات وخطط القراءة من أي مكان. استمتع بمئات الاصدارات شاملة الملفات الصوتية، الكل على جهازك المحمول."
-        button h4: "اذهب الي  Bible.com/app"
-        button h4 sub: "على  جهاز تليفونك المحمول"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "حمل تطبيق الكتاب المقدس الآن..."
         what people: "ماذا يقول الآخرون عن تطبيق الكتاب المقدس المجاني ..."
         t1: "معي الكلمة دائما."
@@ -1007,6 +1010,7 @@ ar:
         iphone ipad: "اي فون/اي باد"
         android: "اندرويد"
         blackberry: "بلاك بيري"
+        windows 8: "Windows 8"
         windows phone: "تليفون ويندوز"
         hp palm: "اش بي/بالم"
         java: "جافا"
@@ -1090,10 +1094,12 @@ ar:
             tracker title: "عداد قصة الميلاد"
             twitter text: "شاهد العالم وهو يقرأ عن ميلاد يسوع. شارك بمتابعة قصة الميلاد على @YouVersion:  https://www.bible.com/christmas"
             facebook text: "شارك بمتابعة قصة الميلاد بينما يقرأ الناس من جميع أنحاء العالم عن ميلاد يسوع. في الكنيسة أو في المنزل، بالقرب من أشخاص نحبهم أو أثناء لحظة هدوء، نتوقف قليلاً للتفكير في أعجوبة حب الله لنا."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>١٠</sup> ولكن قال لهم الملاك,\n“لا تخافوا. ها أنا أُبَشّرُكُم بِخَبرٍ عظيمٍ يَفرَحُ لَه جميعُ الشّعبِ. <sup>١١</sup> وُلِدَ لكُمُ اليومَ في مدينةِ داودَ مُخلّصٌ؛ هوَ المَسيحُ الرّبّ.”"
             read more: "إقرأ قصة الميلاد المذهلة"
             read about: "عدد قراء قصة ميلاد يسوع"
             totals since: " منذ ١ ديسمبر ٢٠١٤ على YouVersion يبلغ:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "عدد مرات التحميل على الهواتف النقالة والألواح الذكية."
             download: "حَمِل تطبيق الكتاب المقدس المجاني"
             versions: "أكثر من %{version_count} إصدار في %{language_count} لغة"
