--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -150,6 +150,10 @@ cy:
     new note: "Nodyn newydd"
     share success: "Mae’ch neges wedi ei rannu."
     share error: "Mae’n ddrwg gennym, digwyddodd gwall wrth rannu’ch neges. Rhowch gynnig arni eto."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Cysylltwch â’ch cyfrif %{connection}"
     deleted connection: "Dilëwyd y cysylltiad â  %{connection}  yn llwyddiannus."
@@ -994,8 +998,7 @@ cy:
         h3: "Mae YouVersion yn Fyd-eang"
         h3 sub: "Ar gael mewn dros %{language_count}o ieithoedd drwy'r byd."
         main: "Mae miliynau o bobl yn defnyddio'r Bible App™ er mwyn gwneud Gair Duw yn rhan o’u bywydau bob dydd. Lawrlwythwch yr Ap am ddim i gael gafael ar eich llyfrnodau, nodiadau a chynlluniau darllen yn unrhyw le. Mwynhewch gannoedd o fersiynau, gan gynnwys fersiynau sain, ar unrhyw ddyfais symudol."
-        button h4: "Dos i Bible.com/app"
-        button h4 sub: "Ar eich Dyfais Symudol"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Lawrlwythwch y Bible App nawr"
         what people: "Beth mae pobl yn ei ddweud am y Bible App rhad ac am ddim…"
         t1: "Mae’r Gair gyda fi bob amser."
@@ -1007,6 +1010,7 @@ cy:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "Blackberry"
+        windows 8: "Windows 8"
         windows phone: "Ffôn Windows"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1090,10 +1094,12 @@ cy:
             tracker title: "Traciwr Hanes y Nadolig"
             twitter text: "Edrych ar y byd yn darllen am eni Iesu. Rhanna Draciwr Stori'r Nadolig @YouVersion: https://www.bible.com/christmas"
             facebook text: "Rhanna Draciwr Hanes y Nadolig wrth i bobl ar hyd a lled y byd ddarllen am eni Iesu.  Yn yr eglwys neu adre, gyda theulu a ffrindiau neu ar ein pennau ein hunain, rydyn ni'n oedi i fyfyrio ar ryfeddod cariad Duw aton ni."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>”10</sup> Yna dywedodd yr angel wrthynt, <br>&quot;Peidiwch ag ofni, oherwydd wele, yr wyf yn cyhoeddi i chwi newyddion da am lawenydd mawr a ddaw i'r holl bobl: <sup>11</sup> ganwyd i chwi heddiw yn nhref Dafydd, Waredwr, yr hwn yw'r Meseia, yr Arglwydd.&quot;"
             read more: "Darllen hanes rhyfeddol y Nadolig"
             read about: "Reading about the birth of Jesus"
             totals since: "YouVersion totals since December 1, 2014:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "Cyfanswm gosodiadau ar ffonau symudol a thabledi"
             download: "Lawrlwytha'r Ap Beibl am ddim"
             versions: "Dros %{version_count}fersiwn mewn%{language_count}iaith"
