--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -83,10 +83,10 @@ da:
             description: "Bible App er blevet installeret næsten 100 millioner gange - en utrolig milepæl! Men vi er lige begyndt. Hent den gratis Bible App i dag - og derefter del den med vennerne. Lad os skabe historie sammen."
         mobile: 
             title: "Bibel App´en"
-            description: "Læs Gud´s ord til enhver tid, overal med YouVersion´s Bibel App. Del skriftsteder med venner, markeringer og bogmærk passager og få en daglig vane med Bibel Planer. Tilgængelig for iOS, Android, Blackberry, Windows Phone og mere."
+            description: "Læs Gud´s ord til enhver tid, overalt med YouVersion´s Bibel App. Del skriftsteder med venner, lav markeringer, og bogmærk passager. Få en daglig vane med Bibel Planer. YouVersion findes til iOS, Android, Blackberry, Windows Phone og flere."
         site: 
             title: "Bible.com"
-            description: "Bring skønheden og sandheden fra Bibelen ind i din dagligdag. Med YouVersion´s Bibel App, kan du læse, se, høre og dele på din smartphone eller tablet online på Bible.com"
+            description: "Bring skønheden og sandheden fra Bibelen ind i din dagligdag. Med YouVersion´s Bibel App, kan du læse, se, høre og dele på din smartphone eller tablet, online på Bible.com"
         connections: 
             index: 
                 title: "Forbundne konti"
@@ -150,6 +150,10 @@ da:
     new note: "Skriv en note"
     share success: "Din besked er blevet delt"
     share error: "Beklager, der var en fejl i delingen af din besked. Prøv venligst igen."
+    share: 
+        request: 
+            no_twitter_connection: "Du har ikke en tilknyttet Twitter konto. Tilslut venligst din konto på indstillingssiden."
+            no_facebook_connection: "Du har ikke en tilknyttet Facebook konto. Tilknyt venligst din konto på indstillingssiden."
     google plus: "Google+"
     connect to: "Forbind til din %{connection} konto"
     deleted connection: "Fjernede med succes din forbindelse til %{connection}."
@@ -862,8 +866,8 @@ da:
             email: "Indtast din email adresse"
             username: "Indtast dit brugernavn"
             password: "Indtast dit password"
-        with email: "Log ind med din email adresse"
-        with facebook: "Log ind med Facebook"
+        with email: "Tilmeld dig via din email adresse"
+        with facebook: "Tilmeld dig via Facebook"
         benefits title: "Få den fulde oplevelse"
         benefits blurb: "Oprettelse af en YouVersion konto giver dig adgang til flere funktioner som bogmærker og noter. De vil dukke op på enhver enhed, hvor du er logget ind En konto gør det også nemmere at dele Bibelen med dine venner, så tage et minut eller to, og tilmeld dig!"
         plan blurb: "Det ser ud som du ønsker at starte en læse plan. Smart! Planer kan hjælpe dig med at få Bibelen en del af dit daglige liv. Log ind eller opret en konto nedenfor og kom i gang!"
@@ -986,8 +990,7 @@ da:
         h3: "YouVersion er global"
         h3 sub: "Tilgængelig i mere end %{language_count} sprog i hele verden."
         main: "Millioner af mennesker bruger Bible App ™ til at gøre Guds Ord en del af deres dagligdag. Hent den gratis app og få adgang til dine bogmærker, noter og læsning planer fra hvor som helst. Nyd hundredvis af versioner, herunder lyd, alle på din mobile enhed."
-        button h4: "Gå til Bible.com/app"
-        button h4 sub: "På dit mobile apparat"
+        button h4: "Gå til Bible.com/app<br/>på din mobile enhed"
         download now: "Hent Bible App´en nu"
         what people: "Hvad folk siger om den gratis Bible App..."
         t1: "Jeg har altid Ordet"
@@ -999,6 +1002,7 @@ da:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1022,13 +1026,13 @@ da:
             features: 
                 read heading: "Læs Bibelen."
                 read description: "Vælg blandt <a href='%{versions_path}'>hundrevis af Bibelversioner og sprog.</a>Du kan sammenligne to versioner ved siden af hinanden. Du også vælge din font og display størrrelse. Tilpas din online Bibel oplevelse præcis som du vil have den."
-                study heading: "Studer Bibelen"
-                study description: "<strong>Highlight</strong> i din yndlingsfarve, <strong>bogmærke</strong> dine foretrukne bibelvers, og gøre notater om, hvad du lærer. Ikke alene er du tilbringe tid i Guds Ord, du bygger en historie af din interaktion med Bibelen."
-                subscribe heading: "Abonner på læse planer"
-                subscribe description: "Dæk hele Bibelen, fokus på et emne, eller læse en andagt fra en begavet lærer. Vælg din plan, og hver dag vil du finde et Bibel udvalg der venter på dig."
-                download heading: "Tag Bibelen med dig"
-                download description: "<a href='https://bible.com/download'>Hent</a> Bible App gratis på enhver mobil enhed. Når du bruger den mobile app, vil dine noter, bogmærker, højdepunkter, planer og meget mere automatisk blive synkroniseret på tværs af alle dine enheder."
-            get started: "Kom i gang med en gratis konto"
+                study heading: "Studér Bibelen."
+                study description: "<strong>Fremhæv bibelvers</strong> i din yndlingsfarve, tilføj <strong>bogmærker</strong> til dine foretrukne bibelvers, og lav notater om, hvad du lærer. Du tilbringe ikke alene tid i Guds Ord, du opbygger også en historik over dine interaktioner med Bibelen."
+                subscribe heading: "Abonnér på læseplaner."
+                subscribe description: "Dækker hele Bibelen med fokus på et emne, eller giver dig andagter fra værdsatte undervisere. Vælg din plan, så vil du hver dag få skriftsteder, der venter på dig."
+                download heading: "Tag Bibelen med dig."
+                download description: "<a href='https://bible.com/download'>Hent</a> 'Bible App' gratis til enhver mobil enhed. Når du bruger den mobile app, vil dine noter, bogmærker, fremhævelser, planer og meget mere, automatisk blive synkroniseret på tværs af alle dine enheder."
+            get started: "Kom i gang med en gratis konto."
             word with you: "Gud´s ord er med dig."
             download action: "Hent Bible App"
             download description: "Hent den gratis YouVersion Bible App til din mobile enhed og du kan have Bibelen med dig overalt."
@@ -1082,10 +1086,12 @@ da:
             tracker title: "Jule-evangelie tæller"
             twitter text: "Se verden læse om Jesu fødsel. Del Jule-evangelie tælleren @YouVersion: https://www.bible.com/christmas"
             facebook text: "Del Jule-evangelie tælleren mens folk rundt omkring i verden læser om Jesu fødsel.  I kirken eller der hjemme, tæt på mennesker vi elsker eller under et stille øjeblik alene, stopper vi op og reflekterer over, det mirakel, Guds kærlighed til os er."
+            summary: "I løbet af december 2014, er dette hvad verden så ud til at læse om fødselen af Jesus"
             verse: "<sup>10</sup> Men englen sagde til dem:<br/>&quot;Frygt ikke! Se, jeg forkynder jer en stor glæde, som skal være for hele folket: <sup>11</sup> I dag er der født jer en frelser i Davids by; han er Kristus, Herren.&quot;"
             read more: "Læs den overraskende historie om Julen"
             read about: "Læser om Jesu fødsel"
             totals since: "YouVersion totalt siden 1. december 2014:"
+            totals during: "YouVersion totaler i December 2014:"
             total installs: "installationer på smartphones og tablets i alt"
             download: "Hent Bibel app'en gratis"
             versions: "Over %{version_count}versioner på %{language_count}sprog"
