--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -150,6 +150,10 @@ de:
     new note: "Neue Notiz"
     share success: "Deine Nachricht wurde weitergeleitet."
     share error: "Entschuldigung, es gab ein Problem mit der Weiterleitung deiner Nachricht. Bitte versuche es noch einmal."
+    share: 
+        request: 
+            no_twitter_connection: "Du bist mit keinem Twitter-Konto verknüpft. Bitte melde dich in den Einstellungen mit deinem Konto an."
+            no_facebook_connection: "Du bist mit keinem Facebook-Konto verknüpft. Bitte melde dich in den Einstellungen mit deinem Konto an."
     google plus: "Google+"
     connect to: "Verbinde dich mit deinem %{connection} Konto."
     deleted connection: "Du wurdest erfolgreich von %{connection} abgemeldet."
@@ -986,8 +990,7 @@ de:
         h3: "YouVersion global"
         h3 sub: "Weltweit verfügbar in mehr als %{language_count} Sprachen."
         main: "Zig Millionen Menschen nutzen die Bibel App™, um Gottes Wort zu einem Teil ihres täglichen Lebens zu machen. Lade die kostenlose App herunter und greife von überall aus auf deine Lesezeichen, Notizen und Leseplänen zu. Genieße hunderte Bibelübersetzungen, darunter auch Hörbibeln, auf deinem mobilen Gerät."
-        button h4: "Gehe zu Bible.com/app"
-        button h4 sub: "auf deinem mobilen Gerät"
+        button h4: "Gehe auf deinem Mobil-Gerät zu Bible.com/app<br>"
         download now: "Lade die Bibel App jetzt herunter."
         what people: "Was Menschen über die kostenlose Bibel App sagen..."
         t1: "Ich habe Gottes Wort immer bei mir."
@@ -999,6 +1002,7 @@ de:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ de:
             tracker title: "Die Weihnachtsgeschichte"
             twitter text: "Schau zu, wie die Welt die Geschichte von der Geburt Jesu liest. Teile den Weihnachtsgeschichten-Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Teile den Weihnachtsgeschichten-Tracker, während die Menschen weltweit von Jesu Geburt lesen.  In der Kirche wie auch zuhause, bei unseren Geliebten oder alleine während einem ruhigen Moment verharren wir, um über das Wunder von Gottes Liebe zu uns nachzudenken."
+            summary: "Im Dezember 2014 haben Menschen auf der ganzen Welt die Berichte über die Geburt Jesu nachgelesen."
             verse: "<sup>10</sup> aber der Engel sagte:<br/> »Fürchtet euch nicht! Ich verkünde euch eine Botschaft, die das ganze Volk mit großer Freude erfüllt: <sup>11</sup> Heute ist für euch in der Stadt, in der schon David geboren wurde, der lang ersehnte Retter zur Welt gekommen. Es ist Christus, der Herr.&quot;"
             read more: "Lies die Weihnachtsgeschichte. Sie ist herrlich!"
             read about: "Von Jesu Geburt lesen"
-            totals since: "wurde seit dem 1. Dezember 2014 schon so oft aufgerufen:"
+            totals since: "Seit dem 1.12.2014 wurde die Geschichte schon so oft aufgerufen:"
+            totals during: "So viele Abrufe waren es im Dezember 2014 in der YouVersion-Gemeinschaft insgesamt:"
             total installs: "Installationen auf Smartphones und Tablets"
             download: "Lade dir die Bibel App gratis herunter!"
             versions: "Mit der Bibel hast du über %{version_count} Übersetzungen in %{language_count} Sprachen"
