--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -150,6 +150,10 @@ en-GB:
     new note: "Create a note"
     share success: "Your message has been shared."
     share error: "Sorry, there was an error sharing your message. Please try again."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Connect to your %{connection} account"
     deleted connection: "Successfully removed your connection to %{connection}."
@@ -986,8 +990,7 @@ en-GB:
         h3: "YouVersion is global"
         h3 sub: "Available in more than %{language_count} languages worldwide."
         main: "Tens of millions of people are using the Bible App™ to make God's Word a part of their daily lives. Download the free app and access your bookmarks, notes, and reading plans from anywhere. Enjoy hundreds of versions, including audio, all on your mobile device."
-        button h4: "Go to Bible.com/app"
-        button h4 sub: "On your mobile device"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Download the Bible App now"
         what people: "What people are saying about the free Bible app..."
         t1: "I always have the Word."
@@ -999,6 +1002,7 @@ en-GB:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "Blackberry"
+        windows 8: "Windows 8"
         windows phone: "Windows phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ en-GB:
             tracker title: "Christmas story tracker"
             twitter text: "Watch the world read about the birth of Jesus. Share the Christmas story tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Share the Christmas story tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Saviour has been born to you; he is the Messiah, the Lord.”"
             read more: "Read the amazing story of Christmas"
             read about: "Reading about the birth of Jesus"
             totals since: "YouVersion totals since 1st December , 2014:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "Total installs on smartphones and tablets"
             download: "Download the free Bible App"
             versions: "Over %{version_count} versions in %{language_count} languages"
