--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -150,6 +150,10 @@ fr:
     new note: "Nouvelle note"
     share success: "Votre message a été partagé."
     share error: "Désolé, une erreur s'est produite lors du partage de votre message. Veuillez réessayer."
+    share: 
+        request: 
+            no_twitter_connection: "Vous n'avez pas de compte Twitter connecté. Veuillez connecter votre compte dans l'écran de paramètres."
+            no_facebook_connection: "Vous n'avez pas de compte Facebook connecté. Veuillez connecter votre compte dans l'écran de paramètres."
     google plus: "Google+"
     connect to: "Vous connecter à votre compte %{connection}"
     deleted connection: "Votre connexion à %{connection} a bien été supprimée."
@@ -986,8 +990,7 @@ fr:
         h3: "YouVersion est Planétaire"
         h3 sub: "Disponible dans plus de %{language_count} langues dans le monde entier."
         main: "Des dizaines de millions de personnes utilisent l'application Bible App™ pour appliquer la Parole de Dieu dans leur quotidien. Téléchargez l'application gratuite et accédez à vos favoris, notes et plans de lecture où que vous vous trouviez. Profitez des centaines de versions disponibles, y compris des versions audio, tout cela à partir de votre appareil mobile."
-        button h4: "Aller sur Bible.com/fr/app"
-        button h4 sub: "Sur votre appareil mobile"
+        button h4: "Allez sur Bible.com/app<br/>sur votre appareil mobile"
         download now: "Télécharger la Bible App maintenant"
         what people: "Ce que les gens disent à propos de la Bible App..."
         t1: "J'ai toujours la Parole avec moi."
@@ -999,6 +1002,7 @@ fr:
         iphone ipad: "Iphone/Ipad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ fr:
             tracker title: "Compteur de l'Histoire de Noël"
             twitter text: "Regardez le monde lire l'histoire de la naissance de Jésus. Partagez le Compteur de l'Histoire de Noël @YouVersion: https://www.bible.com/christmas"
             facebook text: "Partagez le Compteur de l'Histoire de Noël pendant que des personnes tout autour du monde lisent l'histoire de la naissance de Jésus. A l'église ou à la maison, avec les gens que l'on aime ou durant un moment calme tout seul, nous prenons le temps de réfléchir à l'amour merveilleux de Dieu pour nous."
+            summary: "Durant Décembre 2014, voilà à quoi cela ressemblait de voir les gens lire le récit de la naissance de Jésus."
             verse: "<sup>10</sup> L’ange leur dit : <br/>“N’ayez pas peur. Oui, je viens vous annoncer une bonne nouvelle qui sera une grande joie pour tout votre peuple. <sup>11</sup> Aujourd’hui, dans la ville de David, un Sauveur est né pour vous. C’est le Christ, le Seigneur.”"
             read more: "Lisez la formidable histoire de Noël"
             read about: "Lecture du récit de la naissance de Jésus"
             totals since: "Total YouVersion depuis le 1er Décembre 2014 :"
+            totals during: "Total YouVersion pendant Décembre 2014 :"
             total installs: "Total des installations sur smartphones et tablettes"
             download: "Télécharger la Bible App gratuite"
             versions: "Plus de %{version_count} versions en %{language_count} langues"
