--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -150,6 +150,10 @@ hi:
     new note: "नई टिप्पणी"
     share success: "आपके संदेश को शेयर किया गया हैं।"
     share error: "आपके संदेश को शेयर करने में कठिनाई हैं। पुन: कोशिश कीजिए।"
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "अपने %{connection} अकाउंट से कनेक्ट कीजिए।"
     deleted connection: "आपका कनेक्शन हटाने में सफलता हासिल %{connection}।"
@@ -167,7 +171,7 @@ hi:
     badges title: "Badges"
     currently selected: "वर्तमान में चयनित:"
     read reference: "%{reference} पढ़िए"
-    read chapter: "Read full chapter"
+    read chapter: "पूरा अध्याय पढ़े "
     compare all versions: "सभी संस्करण की तुलना करें"
     link will be added: "जोड़ा जायेगा"
     my picture: "मेरी तस्वीर अपडेट कीजिए"
@@ -218,18 +222,18 @@ hi:
     save: "Save"
     cancel: "रद्द करें"
     try the beta: "Beta का उपयोग करके देखिये।"
-    welcome to the beta: "Welcome to Bible.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Bible.com में आपका स्वागत हैं । "
+    highlight: "वचन हाईलाइट करे "
     comment: "नई टिप्पणी"
     note: "नई टिपण्णी"
     selected: "चुना हुआ"
     chapter: "अध्याय"
-    home: "Home"
+    home: "होम "
     bible: "बाइबिल"
     notes title: "टिप्पणियाँ"
     friends: "मित्र"
     groups: "समूह"
-    mobile: "Mobile Apps"
+    mobile: "मोबाइल Apps "
     live: "लाइव/समूह"
     first page: "प्रथम पृष्ट"
     last page: "आखरी पृष्ट"
@@ -260,12 +264,12 @@ hi:
         users like this: "%{last_liker_link} और %{more_link} इसे पसंद करिए"
         vod: 
             title: "आज का पद्य"
-            get daily email: "Get daily email"
+            get daily email: "प्रतिदिन ईमेल प्राप्त करे "
             subscribe: "सदस्य बने"
             update: "अपडेट"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "ग्राहकी बंद करे "
             version: "संस्करण"
-            view more: "View More"
+            view more: "पूरा देखे "
             time: "समय"
         friendship: 
             now friends: "अभी आप मित्र हुए"
@@ -292,7 +296,7 @@ hi:
             edit highlight title: "यह हाईलाइट संपादित कीजिए"
             edit bookmark title: "यह बुकमार्क संपादन करे"
             edit note title: "टिप्पणी सम्पादित करे"
-            edit subscription: "Edit subscription"
+            edit subscription: "ग्राहकी संपादित करें "
             delete: "डिलीट"
             delete confirm: "क्या आप सुनिश्चित हैं?"
             delete highlight title: "यह हाईलाइट डिलीट करे"
@@ -364,8 +368,8 @@ hi:
             add friend button title: "%{user} को मित्र अनुरोध भेजे"
             accept button: "सहमत होना"
             accept request button: "मित्रता कबूल करे"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "अस्वीकार "
+            ignore request button: "निवेदन निरस्त करे "
     notes: 
         none user: "%{username} के द्वारा कोई नोट्स निर्मित नहीं किया गया हैं।"
         blank slate: 
@@ -403,7 +407,7 @@ hi:
         all notes: "पूरी टिप्पणियाँ"
         community notes: "सामाजिक टिप्पणियाँ"
         new note: "नई टिप्पणी"
-        status field: "Note Status:"
+        status field: "स्टेटस नोट करे:"
         edit: "संपादन"
         delete: "इस टिप्पणी को डिलीट कीजिए"
         confirm delete: "हाँ, मैं निश्चित हूँ"
@@ -416,7 +420,7 @@ hi:
         create failure: "नोट सेविंग में त्रुटि"
         destroy success: "नोट डिलीट हुआ"
         destroy failure: "नोट डिलीट करने में त्रुटि"
-        update success: "Note updated"
+        update success: "नोट अपडेट हुआ "
     ref: 
         loading secondary: "माध्यमिक संस्करण में रिफरेन्स लोड किया जा रहा हैं ......."
         clear verses: "चयनित पधों को क्लियर करें"
@@ -478,14 +482,14 @@ hi:
         edit notifications: "सूचनाओ का प्रबंधन"
         edit connections: "कनेक्टेड अकाउंट"
         edit devices: "कनेक्टेड डिवैसिस"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "आज का वचन के लिए ग्राहकी प्रारंभ करें "
+        vod_subscription success: "आज का वचन आपने सफलतापूर्वक प्रारंभ किया "
+        vod_subscription failure: "कृपया क्षमा करे, आज का वचन सब्सक्राइब करने में कठनाई हैं। "
+        daily email delivery: "हर रोज़ इमेल डिलीवरी "
         time: "समय"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "मोबाइल App के लिए रोज़ाना पुश की सूचना "
         subscribe: "सदस्य बने"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "ग्राहकी बंद करे "
         edit account_existence: "अकाउंट डिलीट करें"
         delete account button: "मेरा YouVersion अकाउंट डिलीट कीजिए"
         no devices: "आपके YouVersion अकाउंट से कोई डिवैसिस कनेक्टेड नहीं हैं"
@@ -643,7 +647,7 @@ hi:
             notification errors: "निम्नलिखित error(s) के कारण आपकी टिपण्णी updation में असमर्थ:"
             edit: "संपादन"
             bio: "अपने बारे में"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "अपने पहला और आखरी नाम दर्ज़ कर प्रोफाइल पूर्ण करें "
         password: 
             updated: "मुबारक हो! आपका पासवर्ड अपडेट हुआ।"
             error: "क्षमा कीजिए,आपका पासवर्ड बदलने में त्रुटी पाया गया।"
@@ -652,7 +656,7 @@ hi:
             badges: "मेरे द्वारा अर्जित badge की सूचना प्रधान करे।"
             follower: "मेरे अनुयायी के बारे में सूचना दे।"
             newsletter: "मुझे YouVersion घोषणाओं से अपडेट रखे।"
-            contact_joins: "Notify me when a Contact joins"
+            contact_joins: "मेरे परिचित द्वारा जुड़े जाने पर मुझे सूचित करे "
             note_like: "मेरे लेख के चहेतों की सूचना दे।"
             reading_plans: "मेरे द्वारा शुरू की गयी YouVersion पाठक योजना  की जानकारी सूचित करे।"
             publishing partners: "कृपया मुझे YouVersion सामग्री भागीदरों के समाचारों से अप्डैटड रखे।"
@@ -672,7 +676,7 @@ hi:
         labels label: "लेबिल:"
         title: "बुकमार्क्स"
         my labels: "मेरी लेबल"
-        all labels: "Show All"
+        all labels: "सबकुछ देखे "
         not found: "बुकमार्क्स आपको तुरंत आपके पसंदीदा पद्य या आपके द्वारा पढ़ा हुआ विशेष किताब के आखरी अध्याय पर ले जायेगा । बुकमार्क से जुड़ने के लिए बाइबिल रीडर से पध्यों सेलेक्ट करे और रीडर के ऊपर दर्शाए गए सेलेक्टेड बटन क्लिक कीजिए।"
         other user not found: "%{username} के द्वारा कोई बुकमार्क्स save नहीं किया गया हैं।"
         creation form errors: "निम्नलिखित error(s) के कारण बुकमार्क निर्माण विफल हुआ:"
@@ -964,7 +968,7 @@ hi:
         facebook: "YouVersion फेसबुक पर"
         twitter: "YouVersion ट्विट्टर पर"
         support: "क्या आप YouVersion उपयोग के लिए मदद चाहते हैं?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "ऑनलाइन बाइबिल पर आधारित BIble.com एक निःशुल्क बाइबिल App हैं , जिसे किसी भी मोबाइल पर इनस्टॉल किया जा सकता हैं ।  बाइबिल App उपयोगकर्ता को बाइबिल के वचन सोशियल नेटवर्क पर शेयर करने के लिए इस्तेमाल किया जा सकता हैं। आज के मोबाइल जीवनशैली के अनुकूल अपने पसंदीदा वचन बुकमार्क भी कर सकते हैं। "
         resources title: "प्रेस के द्वारा उपलब्ध संसाधने"
         now title: "YouVersion समुदाय में आज की ताज़ी जानकारी"
         resources: 
@@ -984,10 +988,9 @@ hi:
     mobile page: 
         h2: "प्रभु का वचन आपके साथ"
         h3: "YouVersion दुनिया भर में उपलब्ध"
-        h3 sub: "Available in more than %{language_count} languages worldwide."
+        h3 sub: "%{language_count}से भी अधिक भाषाओँ में दुनिया भर में उपलब्ध। "
         main: "100 से  अधिक संस्करणों का ऑडियो के साथ बाइबिल अपने मोबाइल पर पाइये। कई लाखों लोग इस बाइबिल App का उपयोग कर रहें हैं और प्रभु के वचन को उनके नित्य जीवन का अंग बना रहे हैं। मुफ्त App डाउनलोड करें और बुकमार्क्स, टिप्पणी, पाठक योजना दुनिया भर में कहीं से भी ऐक्सेस करे।"
-        button h4: "Bible.com/app आजमा कर देखे"
-        button h4 sub: "आपके मोबाइल पर"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "बाइबिल App डाउनलोड करें"
         what people: "लोगो की राय इस मुफ्त बाइबिल App के बारें में..."
         t1: "मेरे पास हमेशा प्रभु के वचन उपलब्ध हैं।"
@@ -999,13 +1002,14 @@ hi:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
         symbian: "Symbian"
         mobile web: "Mobile Web"
         amazon: "Kindle Fire"
-        free overlay: "100% Free"
+        free overlay: "100% निःशुल्क "
     pages: 
         generic_error: 
             title: "Oops!"
@@ -1079,17 +1083,19 @@ hi:
         load error: "कृपया क्षमा कीजिये और अधिक संस्करण लोड करने में कठिनाई हैं।इस मेनू को निरस्त कर दोबारा कोशिश करे।"
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
+            tracker title: "क्रिसमस की कहानी प्रगति चिन्ह "
             twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
+            read more: "क्रिसमस की अधभुत कहानी को पढ़िए "
+            read about: "ईसा मसीह के जन्म के बारे में पढ़े "
+            totals since: "1 दिसंबर 2014 से कुल YouVersion इनस्टॉल :"
+            totals during: "दिसंबर 2014 के दौरान कुल YouVersion इनस्टॉल :"
+            total installs: "स्मार्टफोन और टेबलेट पर कुल इनस्टॉल "
+            download: "डाउनलोड करे निःशुल्क बाइबिल App "
             versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
+            tagline: "बाइबिल जहाँ जाए वहाँ आपके साथ "
             chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: बाइबिल app"
