--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -150,6 +150,10 @@ hu:
     new note: "Új Jegyzet"
     share success: "Az üzenetedet megosztottuk."
     share error: "Sajnáljuk, egy hiba miatt az üzeneted megosztása nem sikerült. Próbálkozz újra."
+    share: 
+        request: 
+            no_twitter_connection: "Még nincsen csatlakoztatott Twitter fiókod. Csatlakoztasd fiókodat a beállítások oldalon."
+            no_facebook_connection: "Még nincsen csatlakoztatott Facebook fiókod. Csatlakoztasd fiókodat a beállítások oldalon."
     google plus: "Google+"
     connect to: "Kapcsolódj a %{connection} fiókodhoz"
     deleted connection: "Sikeresen megszakítottad a kapcsolatot a(z) %{connection}-val/-vel."
@@ -986,8 +990,7 @@ hu:
         h3: "A YouVersion globális"
         h3 sub: "Világszerte több, mint %{language_count} nyelven elérhető."
         main: "Emberek tízezrei használják a Biblia alkalmazást, hogy Isten Igéjét életük részévé tegyék. Töltsd le az ingyenes applikációt és bárhol hozzáférsz a könyvjelzőidhez, jegyzeteidhez és olvasó terveidhez. Élvezd a több száz fordítást, beleértve a hangos verziót, mindezt a mobil eszközödön."
-        button h4: "Menj a Bible.com/app"
-        button h4 sub: "A mobil készülékeden"
+        button h4: "Látogasd meg a Bible.com/app oldalt<br>a mobil készülékeden"
         download now: "A Biblia App letöltése most"
         what people: "Amit az emberek mondanak az ingyenes Biblia alkalmazásról..."
         t1: "Mindig velem van az Ige."
@@ -999,6 +1002,7 @@ hu:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ hu:
             tracker title: "Karácsonyi történet nyomozó"
             twitter text: "Figyeld a világot, ahogy Jézus születéséről olvas. Oszd meg a Karácsonyi Történet nyomozót @YouVersion: https://www.bible.com/christmas"
             facebook text: "Oszd meg a Karácsonyi történet nyomozót, miközben az egész világon emberek olvasnak Jézus születéséről.  A templomban vagy otthon, szeretteink közelében vagy egyedül egy csendes pillanatban, megállunk, hogy Isten irántunk való szeretetéről elmélkedjünk."
+            summary: "2014 decemberében így nézett ki a Jézus születéséről olvasó világ."
             verse: "<sup>10</sup> De az angyal így szólt hozzájuk:<br>„Ne féljetek! Íme, nagy örömet adok tudtul nektek és az lesz majd az egész népnek. <sup>11</sup> Ma megszületett a Megváltó nektek, Krisztus, az Úr, Dávid városában."
             read more: "Olvasd el karácsony csodálatos történetét"
             read about: "Olvasás Jézus születéséről"
             totals since: "összes YouVersion felhasználó 2014. december 1-je óta"
+            totals during: "Összes YouVersion felhasználó 2014 decemberében"
             total installs: "Összes telepítés okostelefonokon és táblagépeken"
             download: "Töltsd le az ingyenes Biblia alkalmazást"
             versions: "Több mint %{version_count} fordítás %{language_count} nyelven"
