--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -150,6 +150,10 @@ id:
     new note: "Buat Catatan"
     share success: "Pesan Anda telah dibagikan."
     share error: "Maaf, terjadi kesalahan saat membagikan pesan Anda. Cobalah kembali."
+    share: 
+        request: 
+            no_twitter_connection: "Anda tidak terhubung dengan akun Twitter. Silakan hubungkan akun Anda pada halaman pengaturan."
+            no_facebook_connection: "Anda tidak terhubung dengan akun Facebook. Silakan hubungkan akun Anda pada halaman pengaturan."
     google plus: "Google+"
     connect to: "Hubungkan dengan akun %{connection} Anda"
     deleted connection: "Koneksi Anda ke %{connection} telah berhasil diputus."
@@ -984,8 +988,7 @@ id:
         h3: "YouVersion Mendunia"
         h3 sub: "Tersedia dalam lebih dari %{language_count} bahasa di seluruh dunia."
         main: "Puluhan juta orang menggunakan Ap Alkitab™ untuk membuat Firman Tuhan bagian keseharian hidup mereka. Unduh ap gratis ini dan akses markah, catatan, dan rencana bacaan Anda dari manapun. Nikmati ratusan versi, termasuk suara, semua di piranti seluler Anda."
-        button h4: "Kunjungi Bible.com/app"
-        button h4 sub: "Di Piranti Seluler Anda"
+        button h4: "Kunjungi Bible.com/app<br>di Piranti Seluler Anda"
         download now: "Unduh Ap Alkitab Sekarang"
         what people: "Apa kata orang tentang Ap Alkitab gratis..."
         t1: "Saya selalu memiliki Firman Tuhan."
@@ -997,6 +1000,7 @@ id:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1080,10 +1084,12 @@ id:
             tracker title: "Pelacak Kisah Natal"
             twitter text: "Saksikan dunia membaca tentang kelahiran Yesus. Bagikan Pelacak Kisah Natal @YouVersion: https://www.bible.com/christmas"
             facebook text: "Bagikan Pelacak Kisah Natal saat orang-orang di seluruh dunia membaca tentang kelahiran Yesus.  Di gereja atau di rumah, dengan orang yang kita kasihi atau saat teduh pribadi, kita berhenti sejenak untuk merenungkan kasih Allah kepada kita."
+            summary: "Selama Desember 2014, seperti inilah tampaknya melihat dunia membaca tentang kelahiran Yesus."
             verse: "<sup>10</sup> Lalu kata malaikat itu kepada mereka:<br>&quot;Jangan takut, sebab sesungguhnya aku memberitakan kepadamu kesukaan besar untuk seluruh bangsa: <sup>11</sup> Hari ini telah lahir bagimu Juruselamat, yaitu Kristus, Tuhan, di kota Daud.”"
             read more: "Baca kisah luar biasa Natal"
             read about: "Bacaan tentang kelahiran Yesus"
             totals since: "Total YouVersion sejak 1 Desember 2014:"
+            totals during: "YouVersion total selama Desember 2014:"
             total installs: "Total instalasi di smartphone dan tablet"
             download: "Unduh Ap Alkitab Gratis"
             versions: "Lebih dari %{version_count} versi di %{language_count} bahasa"
