--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -150,6 +150,10 @@ it:
     new note: "Nuova Nota"
     share success: "Il tuo messaggio è stato condiviso."
     share error: "Scusa, c'è stato un errore nel condividere il tuo messaggio. Riprova per favore."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Collegati al tuo account %{connection}"
     deleted connection: "Il collegamento con %{connection} è stato rimosso con successo."
@@ -986,8 +990,7 @@ it:
         h3: "YouVersion è Globale"
         h3 sub: "Disponibile in più di %{language_count}lingue in tutto il mondo."
         main: "Decine di milioni di persone stanno usando l'App Bibbia™ per rendere la Parola di Dio parte della loro vita quotidiana. Scarica l'app gratuita e accedi ai tuoi segnalibri, note e piani di lettura ovunque. Avrai a disposizione centinaia di versioni, alcune con audio, sul tuo dispositivo mobile."
-        button h4: "Vai alla applicazione Bible.com/app"
-        button h4 sub: "Sul Tuo Dispositivo Mobile"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Scarica l'App Bibbia Adesso"
         what people: "Quello che dice la gente a proposito dell'App Bibbia gratuita..."
         t1: "Ho sempre la Parola con me."
@@ -999,6 +1002,7 @@ it:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ it:
             tracker title: "Sulle Orme del Natale"
             twitter text: "Guarda come il mondo legge a proposito della nascita di Gesù. Condividi Sulle Orme del Natale @YouVersion: https://www.bible.com/christmas"
             facebook text: "Condividi \"Sulle Orme del Natale\" mentre persone in tutto il mondo leggono a proposito della nascita di Gesù.  In chiesa o a casa, vicino ai nostri cari o durante un momento tranquillo da soli, ci fermiamo a riflettere sulla meraviglia dell'amore di Dio per noi."
+            summary: "Durante il mese di dicembre 2014, ecco come si vedeva il mondo leggere a proposito della nascita di Gesù."
             verse: "<sup>10 </sup> L'angelo disse loro:<br>&quot;Non temete, perché io vi porto la buona notizia di una grande gioia che tutto il popolo avrà: <sup>11</sup> Oggi, nella città di Davide, è nato per voi un Salvatore, che è il Cristo, il Signore.&quot;"
             read more: "Leggi la meravigliosa storia del Natale"
             read about: "Leggendo a proposito della nascita di Gesù"
             totals since: "Totali YouVersion dal 1 dicembre 2014:"
+            totals during: "Totali YouVersion durante dicembre 2014:"
             total installs: "Totale delle installazioni su smartphone e tablet"
             download: "Scarica l'App Bibbia gratuita"
             versions: "Più di %{version_count} versioni in %{language_count} lingue"
