--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -150,6 +150,10 @@ ja:
     new note: "新規ノート"
     share success: "メッセージがシェアされました"
     share error: "メッセージのシェアに失敗しました。もう一度、実行してください。"
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "%{connection} アカウントに連携"
     deleted connection: "%{connection} への連携設定が問題なく解除されました。"
@@ -984,8 +988,7 @@ ja:
         h3: "YouVersion はグローバルです"
         h3 sub: "世界%{language_count}カ国語以上の言語での利用が可能"
         main: "何千万人ものユーザが聖書アプリを利用して、神様の御言葉を日常生活の一環に取り入れています。無料のアプリをダウンロードして、ブックマーク、ノート、読書プランにどこからでもアクセスしましょう。何百種もの聖書訳（音読聖書も有り）をご利用のモバイル機器からお楽しみください。"
-        button h4: "Bible.com/appに行く"
-        button h4 sub: "モバイル機器で利用"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "聖書アプリを今すぐダウンロード"
         what people: "聖書アプリについて、どんなことが言われているのでしょう・・・"
         t1: "いつでも聖書を読むことができる。"
@@ -997,6 +1000,7 @@ ja:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1080,10 +1084,12 @@ ja:
             tracker title: "クリスマスのお話読者"
             twitter text: "世界中の人々がイエス・キリスト誕生のお話を読んでいるのを見るYouVersion: https://www.bible.com/christmasでクリスマスのお話読者をシェアする"
             facebook text: "世界中の人々がイエス・キリスト誕生のお話を読むたびにクリスマスのお話読者をシェアします。教会でご自宅で、仲の良いお友達・ご家族とご一緒にまたはおひとりで、神様の愛の素晴らしさを振り返ります"
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10</sup>御使は言った。<br>「恐れるな。見よ、すべての民に与えられる大きな喜びを、あなたがたに伝える。<sup>11</sup>きょうダビデの町に、あなたがたのために救主がお生れになった。このかたこそ主なるキリストである。"
             read more: "素晴らしいクリスマスのお話を読む"
             read about: "イエス・キリスト誕生のお話を読む"
             totals since: "2014年12月1日以降のYouVersionビジター総数:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "　スマートフォン及びタブレットへのインストール総数"
             download: "無料聖書アプリをダウンロードする"
             versions: "%{version_count} 種類以上の聖書訳が%{language_count} ヵ国語の言語で"
