--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -150,6 +150,10 @@ km:
     new note: "កំណត់​ត្រាថ្មី"
     share success: "សារ​របស់​លោក​អ្នកត្រូវ​បាន​ចែក​រំលែក"
     share error: "សូមទោស មាន​កំហុស​ក្នុង​ពេល​ចែក​រំលែក​សារ​របស់​អ្នក។ សូម​ព្យាយាមម្ដង​ទៀត"
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "ភ្ជាប់​គណនី​របស់​អ្នក %{connection}"
     deleted connection: "ការ​ភ្ជាប់​របស់​លោក​អ្នក​ត្រូវ​បាន​ដក​ចេញ​ទៅ %{connection}"
@@ -984,8 +988,7 @@ km:
         h3: "YouVersion គឺជា​សកល"
         h3 sub: "មាន​ច្រើន​ជាង​%{language_count} ភាសារ​ជុំវិញ​ពិភពលោក។"
         main: "មនុស្ស​ដប់​លាន​អ្នក​កំពុង​ប្រើ​ប្ាស់ Bible App™ ដើម្បី​ធ្វើ​អោយ​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់​ជា​ផ្នែក​មួយ​នៅ​ក្នុង​ជីវិតរស់​នៅ​របស់​គេ។ ដោន​ឡូដ​កម្មវិធី​ដោយ​ឥត​គិត​ថ្លៃ​ហើយ​ចូល​ទៅ​កាន់​កំណត់​ចំណាំ, កំណត់​ត្រា, និង​គំរោង​អានគម្ពីរ​ពី​គ្រប់​ទៅ​កន្លែង។ សប្បាយ​ជាមួយ​នឹង​ជំនាន់​គម្ពីរ​រាប់​រយ រូម​បញ្ចូល​ទាំង​សំលេង​នៅ​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
-        button h4: "ចូលទៅកាន់ Bible.com/app"
-        button h4 sub: "​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "ដោន​ឡូដ​យក​ Bible App ឥឡូវនេះ"
         what people: "អ្វី​ដែល​មនុស្ស​បាន​និយាយ​អំពី​ Bible app ដោយ​ឥត​គិត​ថ្លៃ..."
         t1: "ខ្ញុំ​តែង​តែ​មាន​ព្រះបន្ទូល។"
@@ -997,6 +1000,7 @@ km:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1080,10 +1084,12 @@ km:
             tracker title: "តាម​ដាន​រឿង​គ្រិស្ត​ស្មាស់"
             twitter text: "មើល​ពី ពិភព​លោក​អាន​ពីកំណើត​ព្រះយេស៊ូ ចែក​រំលែក​រឿង​គ្រិស្ត​ស្មាស់@YouVersion​https://www.bible.com/christmas"
             facebook text: "ចែក​រំលែក​រឿង​គ្រិស្ត​ស្មាស់​ដូច​ជាមនុស្ស​នៅ​ជុំ​វិញពិភព​លោក​កំពុង​អាន​អំពី​រឿង​កំណើត​ព្រះយេស៊ូ  នៅ​ក្នុង​ក្រុម​ជំនុំ ឬ​នៅ​ផ្ទះ ជិត​មនុស្ស​ដែល​យើង​ស្រឡាញ់ ឬ​ក្នុង​កំឡុង​ពេល​ស្ងៀម​ស្ងាត់​តែ​ម្នាក់​ឯង យើង​កំពុត​តែ​ឆ្លុះ​បញ្ចាំង​​​ពី​ក្ដី​ស្រឡាញ់​ដ៏អស្ចារ្យ​របស់​ព្រះ​ចំពោះ​យើង។"
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup> ទេវតា​ពោល​ទៅ​គេ​ថា៖ «កុំ​ខ្លាច​អ្វី​ឡើយ </sup>ខ្ញុំ​នាំ​ដំណឹងល្អ​មួយ​មក​ប្រាប់​អ្នក​រាល់​គ្នា។ ដំណឹង​នេះ​នឹង​ធ្វើ​អោយ​ប្រជារាស្ត្រ​ទាំង​មូល មាន​អំណរ​ដ៏​លើសលប់។ <sup>យប់​នេះ នៅ​ក្នុង​ភូមិ​កំណើត​របស់​ព្រះបាទ​ដាវីឌ ព្រះសង្គ្រោះ​របស់​អ្នក​រាល់​គ្នា​ប្រសូត​ហើយ គឺ​ព្រះគ្រិស្ដ​ជា​អម្ចាស់។ </sup>"
             read more: "អាន​ពី​រឿងគ្រិស្ត​ស្មាស់​​ដ៏​អស្ចារ្យ"
             read about: "អាន​អំពី​កំណើត​ព្រះ​យេស៊ូ​គ្រិស្ត"
             totals since: "ចំនួន​សរុប​ YouVersion តាំង​ពី​ ខែធ្នូ 1, 2014:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "ចំនួន​សរុប​ដែល​បាន​តម្លើង​លើ​ទូរស័ព្ទ​ឆ្លាត​វៃ និង តាប្លែត"
             download: "ដោន​ឡូដ​យក​កម្មវិី ព្រះ​គម្ពីរ​ដោយ​ឥត​គិត​ថ្លៃ"
             versions: "លើស​ពី %{version_count} ជំនាក់​ក្នុង​ %{language_count} ភាសា"
