--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -150,6 +150,10 @@ ko:
     new note: "새 노트"
     share success: "메시지가 공유되었습니다."
     share error: "메시지 공유 진행 중 오류가 발생했습니다. 다시 시도를 해주세요."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "구글 플러스"
     connect to: "회원님의 %{connection} 계정에 접속"
     deleted connection: "%{connection}  접속이 취소되었습니다."
@@ -984,8 +988,7 @@ ko:
         h3: "YouVersion은 세계적인 공동체입니다."
         h3 sub: "전세계적으로 %{language_count}개 이상의 언어로 제공되고 있습니다."
         main: "수천만의 사람들이 성경앱™을 통해서 하나님의 말씀이 그들의 일상 생활의 한 부분이 되도록 사용하고 있습니다. 이 무료 앱을 다운로드하여 책갈피, 노트및 성경읽기계획 등을 어디에서나 사용하세요. 수백 종의 번역본을 비롯한 오디오 성경을 여러분의 모바일 기기에서 사용하세요."
-        button h4: "Bible.com/app 으로 가기"
-        button h4 sub: "이동기기 상에서"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "지금 성경 앱 다운로드"
         what people: "무료 성경 앱에 대한 의견..."
         t1: "항상 말씀을 지니고 있습니다."
@@ -997,6 +1000,7 @@ ko:
         iphone ipad: "아이폰/아이패드"
         android: "안드로이드"
         blackberry: "블랙베리"
+        windows 8: "Windows 8"
         windows phone: "윈도우폰"
         hp palm: "HP/팜"
         java: "자바"
@@ -1080,10 +1084,12 @@ ko:
             tracker title: "크리스마스 이야기 현황"
             twitter text: "전 세상이 예수님의 성탄 에 대해서 얼마나 읽고 있는지 살펴보세요. 크리스마스 이야기를 현황 판에서 나누세요 @YouVersion: https://www.bible.com/christmas"
             facebook text: "세상 방방곡곡에서 예수님의 탄생에 관해 읽는 분들과 크리스마스 현황판에 대해서 나누어보세요.교회 또는 집에서든, 사랑하는 분들과 함께든 아니면 개인 큐티 시간에서든, 우리를 위한 놀라운 하나님의 사랑에 대해서 묵상해봅시다."
+            summary: "2014년 12월 동안 전 세계에서 예수님의 탄생에 관해 성경을 읽은 모습입니다."
             verse: "<sup>10</sup> 천사가 그들에게 말하였다. &quot;두려워하지 말아라.  나는 온 백성에게 큰 기쁨이 될 소식을 너희에게 전하여 준다. <sup>11</sup> 오늘 다윗의 동네에서 너희에게 구주가 나셨으니, 그는 곧 그리스도 주님이시다.&quot;"
             read more: "놀라운 크리스마스의 이야기를 읽어보세요."
             read about: "예수님의 성탄에 대해서 읽어보세요."
             totals since: "2014년 12월 1일 이후, YouVersion 총 설치수:"
+            totals during: "2014년 12월 동안 YouVersion 총계"
             total installs: "스마트폰이나 태블랫에 설치"
             download: "무료 성경 앱을 다운로드하세요"
             versions: "%{language_count} 언어로 된 %{version_count} 이상의 번역본"
