--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -150,6 +150,10 @@ lv:
     new note: "Izveidot piezīmi"
     share success: "Jūs esat dalījušies ar savu ziņu."
     share error: "Piedodiet, daloties ar jūsu ziņu radās kļūme. Lūdzu mēģiniet vēlreiz."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Pieslēgties jūsu %{connection} kontam."
     deleted connection: "Jūs veiksmīgi atslēdzāties no %{connection}"
@@ -167,7 +171,7 @@ lv:
     badges title: "Nozīmītes"
     currently selected: "Pašlaik izvēlēts:"
     read reference: "Lasi %{reference}"
-    read chapter: "Read full chapter"
+    read chapter: "Lasīt visu nodaļu"
     compare all versions: "Salīdzināt visus tulkojumus"
     link will be added: "Tiks pievienots"
     my picture: "Mainīt attēlu"
@@ -224,7 +228,7 @@ lv:
     note: "Jauna piezīme"
     selected: "Izvēlēts"
     chapter: "Nodaļa"
-    home: "Home"
+    home: "Mājas"
     bible: "Bībele"
     notes title: "Piezīmes"
     friends: "Draugi"
@@ -988,8 +992,7 @@ lv:
         h3: "YouVersion ir globāla"
         h3 sub: "Pieejams vairāk kā %{language_count} valodās visā pasaulē."
         main: "Desmitiem miljonu cilvēku lieto Bībeles aplikāciju™ lai padarītu Dieva Vārdu par daļu no viņu ikdienas dzīves. Lejupielādē bezmaksas aplikāciju un piekļūsti savām grāmatzīmēm, piezīmēm un lasīšanas plāniem no jebkuras vietas. Izbaudi simtiem tulkojumu, ieskaitot audio, viss uz tavas mobilās ierīces."
-        button h4: "Doties uz Bible.com/app"
-        button h4 sub: "Jūsu mobilajā ierīcē"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Lejuplādējiet Bībeles aplikāciju tagad"
         what people: "Ko cilvēki saka par bezmaksas Bībeles aplikāciju..."
         t1: "Man vienmēr ir Vārds"
@@ -1001,6 +1004,7 @@ lv:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1081,18 +1085,20 @@ lv:
         load error: "Atvainojamies, radās kļūme ielādējot citus tulkojumus. Mēģiniet vēlreiz, aiztaisot šo izvēlni un attaisot to no jauna."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Ziemassvētku stāsta meklētājs"
+            twitter text: "Seko līdzi pasaulei, kad tā lasa par Jēzus dzimšanu. Dalies ar Ziemassvētku stāsta meklētāju @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Dalies ar Ziemassvētku stāsta meklētāju, jo cilvēki visā pasaulē lasa par Jēzus dzimšanu.  Baznīcā vai mājās, kad esam ar tiem, kurus mīlam, vai vienatnes mirkļos, mēs apstājamies, lai pārdomātu Dieva brīnišķo mīlestību uz mums."
+            summary: "2014. gada decembrī tieši šāds skats pavērās, sekojot līdzi pasaulei, kad tā lasa par Jēzus dzimšanu."
+            verse: "<sup>10 Bet eņģelis uz tiem sacīja: &quot;Nebīstieties, jo redzi,</sup>es jums pasludinu lielu prieku, kas visiem ļaudīm notiks:  <sup>11 jo jums šodien Pestītājs dzimis, Dāvida pilsētā, kas ir Kristus, Tas Kungs.&quot;</sup>"
+            read more: "Lasi apbrīnojamo Ziemassvētku stāstu!"
+            read about: "Lasīšana par Jēzus dzimšanu"
+            totals since: "YouVersion skaitļos kopš 2014. gada decembra:"
+            totals during: "YouVersion skaitļos 2014. gada decembrī:"
+            total installs: "Tik bieži aplikācija instalēta viedtālruņos un planšetdatoros."
+            download: "Lejupielādē bezmaksas Bībeles aplikāciju."
+            versions: "Vairāk nekā %{version_count} versijas %{language_count} valodās."
+            tagline: "Bībele, kas ir pie rokas vienmēr."
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Bībeles aplikācija"
             tagline: "Tas sākas ar <em>100 miljoniem</em>"
