--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -150,6 +150,10 @@ mk:
     new note: "Нова белешка"
     share success: "Ја сподели пораката."
     share error: "Имаше проблем при споделување на твојата порака. Обиди се повторно."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Поврзување со твојот %{connection} профил"
     deleted connection: "Успешно ја отстрани конекцијата со %{connection}."
@@ -986,8 +990,7 @@ mk:
         h3: "YouVersion е глобално"
         h3 sub: "Достапна во над %{language_count} јазици ширум светот."
         main: "Десетици милиони луѓе ја користат Библиската Апликација™ за да го користат Божјиот збор како дел од нивниот секојдневен живот. Симни ја бесплатната апликација и имај пристап до твоите обележувачи, белешки, планови за читање, каде и да си. Уживај во стотици верзии, вклучувајќи и аудио, сето тоа на твојот мобилен телефон."
-        button h4: "Оди до Bible.com/app"
-        button h4 sub: "На твојот мобилен уред"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Симни ја Библиската апликација сега"
         what people: "Што велат за Библиската апликација"
         t1: "Секогаш ја носам Библијата со себе."
@@ -999,6 +1002,7 @@ mk:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,15 +1086,17 @@ mk:
             tracker title: "Божиќен локатор на приказни"
             twitter text: "Гледај како светот чита за Исусовото раѓање. Сподели го Божиќниот локатор на приказни @YouVersion: https://www.bible.com/christmas"
             facebook text: "Сподели го Божиќниот локатор на приказни додека луѓето во светот читаат за Исусовото раѓање.  Во црква или дома, во присуство на луѓе кои ги сакаме или за време на нашите тивки моменти, паузираме да се потсетиме на чудесната Божја љубов кон нас."
+            summary: "Вака изгледаше да се види како светот читаше за раѓањето Христово во декември 2014 год."
             verse: "<sup>10</sup> А ангелот им рече:<br>„Не плашете се! Еве, ви навестувам голема радост, која ќе биде за сите луѓе; <sup>11</sup> зашто денеска ви се роди во градот Давидов Спасител, Кој е Христос Господ;“"
-            read more: "Read the amazing story of Christmas"
+            read more: "Прочитај ја неверојатната приказна за Божиќ"
             read about: "Приказна за раѓањето на Исус"
             totals since: "YouVersion вкупно од 1 декември 2014:"
+            totals during: "YouVersion вкупно, во текот на декември 2014 год."
             total installs: "Вкупно инсталирани на телефони и таблети"
             download: "Преземи ја бесплатната Апликација „Библија“"
             versions: "Преку %{version_count} верзии на %{language_count} јазици"
             tagline: "Библија која е постојано со тебе"
-            chapter counter format: "9,999,999"
+            chapter counter format: "9.999.999"
         100m: 
             logo: "YouVersion: апликација „Библија“"
             tagline: "Започнува со <em>100 милиони</em>"
