--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -150,6 +150,10 @@ nl:
     new note: "Notitie aanmaken"
     share success: "Je bericht is gedeeld."
     share error: "Sorry, er ging iets verkeerd tijdens het delen van je bericht. Probeer het nog eens."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Verbinden met je %{connection}-account"
     deleted connection: "Succesvolle verwijdering van je verbinding met %{connection}."
@@ -986,8 +990,7 @@ nl:
         h3: "YouVersion is wereldwijd"
         h3 sub: "Beschikbaar in meer dan %{language_count} talen wereldwijd."
         main: "Tientallen millioenen mensen gebruiken de Bijbel App om Gods Woord een deel van hun leven te maken. Download de gratis app en krijg toegang op je bladwijzers, notitities en leesplannen vanaf elke plek. Geniet van honderden vertalingen, inclusief audio, alles op je mobiele apparaat."
-        button h4: "Ga naar Bible.com/app"
-        button h4 sub: "op je mobiele apparaat"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "De Bijbel App nu downloaden"
         what people: "Wat mensen over de gratis Bijbel app zeggen…"
         t1: "Ik heb het Woord altijd bij me."
@@ -999,6 +1002,7 @@ nl:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ nl:
             tracker title: "Kerstverhaal Volger"
             twitter text: "Lees hoe de wereld leest over de geboorte van Jezus, Deel de Kerstverhaal Volger @YouVersion: https://www.bible.com/christmas"
             facebook text: "Deel de Kerstverhaal Volger terwijl wereldwijd mensen lezen over de geboorte van Jezus.  In de kerk of thuis, bij mensen van wie we houden of tijdens een rustig moment alleen, nemen we even pauze om na te denken over het wonder van Gods liefde voor ons."
+            summary: "Dit is hoe het eruit zag in december 2014 toen de wereld las over de geboorte van Jezus."
             verse: "<sup>10 </sup> De engel zei tegen hen:<br>“wees niet bang, want ik kom jullie goed nieuws brengen, dat het hele volk met grote blijdschap zal vervullen. <sup>11 </sup> Vandaag is in de stad van David jullie Redder geboren. Hij is de Messias, de Heer.”"
             read more: "Lees het prachtige Kerstverhaal"
             read about: "Lezen over de geboorte van Jezus"
             totals since: "Aantal van YouVersion sinds 1 december 2014"
+            totals during: "YouVersion totalen gedurende december 2014:"
             total installs: "Totaal aantal installaties op smartphones en tablets"
             download: "Download de gratis Bijbel App"
             versions: "Meer dan %{version_count} versies in %{language_count} talen"
