--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -150,6 +150,10 @@
     new note: "Nytt notat"
     share success: "Meldingen din har blitt delt."
     share error: "Det skjedde en feil ved deling av meldingen din. Vennligst prøv igjen."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Koble til din %{connection} konto"
     deleted connection: "Din kobling til %{connection} er nå fjernet."
@@ -986,8 +990,7 @@
         h3: "YouVersion er verdensomspennende"
         h3 sub: "Tilgjengelig på mer enn %{language_count} språk verden over."
         main: "Et titalls millioner mennesker bruker 'the Bible App™' for å gjøre Guds ord til en del av sine daglige liv. Last ned denne gratis appen og få tilgang til dine bokmerker, notater og leseplaner overalt. Du tilbys hundrevis av ulike bibelutgaver, inkludert lydbibler - alt på din mobiltelefon eller ipad."
-        button h4: "Gå til Bible.com/app"
-        button h4 sub: "På din mobile enhet"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Last ned Bibel-appen nå"
         what people: "Dette sier folk om den gratis Bibel-appen..."
         t1: "Jeg har alltid Ordet."
@@ -999,6 +1002,7 @@
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@
             tracker title: "Juleevangelieteller"
             twitter text: "Se verden lese om Jesu fødsel. Del juleevangelietelleren @YouVersion: https://www.bible.com/christmas"
             facebook text: "Del juleevangelietelleren mens folk over hele verden leser om Jesu fødsel.  I kirken eller hjemme, sammen med folk vi er glad i eller i et stille øyeblikk alene. Vi stopper opp for å ta til oss det underet Guds kjærlighet er for oss."
+            summary: "I løpet av desember 2014 så det slik ut når verden leste om Jesu fødsel."
             verse: "<sup>10</sup> Men engelen sa til dem,<br>“Frykt ikke! For se, jeg forkynner dere en stor glede - en glede for alt folket. <sup>11</sup> I dag er det født dere en frelser, som er Messias, Herren - i Davids by.”"
             read more: "Les den fantastiske historien om julen"
             read about: "Les om Jesu fødsel"
             totals since: "Samlet på YouVersion siden 1. desember 2014:"
+            totals during: "Antall i YouVersion i løpet av desember 2014: "
             total installs: "Antall installasjoner på smarttelefoner og nettbrett"
             download: "Last ned Bibel-appen gratis"
             versions: "Over %{version_count} oversettelser på %{language_count} språk"
