--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -150,6 +150,10 @@ pl:
     new note: "Utwórz notatkę"
     share success: "Twoja wiadomość została udostępniona."
     share error: "Wystąpił błąd podczas udostępniania twojej wiadomości. Prosimy spróbuj ponownie."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Podłącz się do swojego konta w serwisie %{connection}"
     deleted connection: "Twoje podłączenie z serwisem %{connection} zostało usunięte."
@@ -990,8 +994,7 @@ pl:
         h3: "YouVersion jest globalne"
         h3 sub: "Dostępne w ponad %{language_count} językach na całym świecie."
         main: "Dziesiątki milionów ludzi używają Aplikacji Biblii, aby uczynić Słowo Boże częścią swojego życia. Pobierz darmową aplikację i uzykaj dostęp do zakładek, notatek oraz planów czytania z dowolnego miejsca. Ciesz się setkami przekładów i wersjami audio - dostępne na twoim mobilnym urządzeniu."
-        button h4: "Przejdź do Bible.com/app"
-        button h4 sub: "Na twoim urządzeniu mobilnym"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Pobierz teraz Aplikację Biblii"
         what people: "Co ludzie mówią o darmowej Aplikacji Biblii..."
         t1: "Zawsze mam ze sobą Słowo."
@@ -1003,6 +1006,7 @@ pl:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1086,10 +1090,12 @@ pl:
             tracker title: "Historia Bożego Narodzenia"
             twitter text: "Oglądaj świat czytający o narodzinach Jezusa. Podziel się historią Bożego Narodzenia @YouVersion: https://www.bible.com/christmas"
             facebook text: "Podziel się historią Bożego Narodzenia kiedy ludzie na całym świecie czytają o narodzinach Jezusa.  W kościele czy domu, w pobliżu ludzi których kochamy czy podczas spokojnej samotnej chwili, zatrzymujemy się aby zastanowić się nad cudowną miłością Boga do nas."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10 </sup> I rzekł do nich anioł:<br>“ Nie bójcie się, bo oto zwiastuję wam radość wielką, która będzie udziałem wszystkiego ludu, <sup>11 </sup> Gdyż dziś narodził się wam Zbawiciel, którym jest Chrystus Pan, w mieście Dawidowym.”"
             read more: "Czytaj niesamowitą historię Bożego Narodzenia"
             read about: "Czytamy o narodzinach Jezusa"
             totals since: "Licznik YouVersion licznik od 1 grudnia 2014:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "Łączna ilość zainstalowań na smartfonach i tabletach"
             download: "Pobierz darmową wersję Aplikacji Biblii"
             versions: "Pond %{version_count} wersji w %{language_count} językach"
