--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -150,6 +150,10 @@ pt-PT:
     new note: "Criar Nota"
     share success: "A sua mensagem foi partilhada."
     share error: "Desculpe, aconteceu um erro a partilhar a sua mensagem. Por favor tente novamente."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "A associar à sua conta %{connection}"
     deleted connection: "Associação removida com sucesso a %{connection}"
@@ -747,7 +751,7 @@ pt-PT:
         overview: "Resumo do Plano"
         start: "Iniciar este Plano"
         length field: "Duração do Plano:"
-        view sample: "Ver uma Amostra de Leitura"
+        view sample: "Ver uma Amostra da Leitura"
         users subscribed: "%{user_count} Utilizadores a Lerem Este Plano"
         more info: "Mais Informação"
         about this plan: "Informação sobre este Plano"
@@ -986,8 +990,7 @@ pt-PT:
         h3: "YouVersion é Global"
         h3 sub: "Disponível em mais de %{language_count} línguas em todo o mundo."
         main: "Dezenas de milhões de pessoas estão a usar a App da Bíblia™ para fazerem da Palavra de Deus uma parte da sua vida. Transfira a app gratuita e aceda aos seus marcadores, notas, e planos de leitura em qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo no seu dispositivo móvel."
-        button h4: "Ir para Bible.com/app"
-        button h4 sub: "No Seu Dispositivo Móvel"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Descarregue a App da Bíblia Agora"
         what people: "O que as pessoas dizem sobre a App gratuita da Bíblia..."
         t1: "Eu tenho sempre a Palavra."
@@ -999,6 +1002,7 @@ pt-PT:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ pt-PT:
             tracker title: "A História do Natal"
             twitter text: "Veja o mundo a ler sobre o nascimento de Jesus. Partilhe o contador da História do Natal @YouVersion: https://www.bible.com/pt-PT/christmas"
             facebook text: "Partilhe o contador da História do Natal à medida que pessoas ao redor do mundo lêem sobre o nascimento de Jesus.  Na igreja ou em casa, perto de pessoas que ama ou durante momentos de silêncio sozinho, façamos uma pausa para reflectir na maravilha do amor de Deus por nós."
+            summary: "Durante o mês de Dezembro de 2014 esta foi a imagem do mundo a ler sobre o nascimento de Jesus."
             verse: "<sup>10</sup> Mas o anjo disse-lhes,<br>“Não tenham medo!  Venho aqui trazer-vos uma boa nova que será motivo de alegria para todo o povo. <sup>11</sup> Pois nasceu hoje, na cidade de David, o vosso Salvador que é Cristo,o Senhor!”"
             read more: "Leia a surpreendente História do Natal"
             read about: "Quantidade de pessoas a ler sobre o nascimento de Jesus"
             totals since: "Totais YouVersion desde 1 de Dezembro de 2014:"
+            totals during: "Totais YouVersion durante o mês de Dezembro de 2014:"
             total installs: "Downloads em smartphones e tablets"
             download: "Transfira gratuitamente a App da Bíblia"
             versions: "Mais de %{version_count} versões em %{language_count} idiomas"
