--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -150,6 +150,10 @@ ro:
     new note: "Notiță nouă"
     share success: "Mesajul tău a fost partajat."
     share error: "Ne pare rău, s-a produs o eroare la partajarea mesajului tău. Încearcă din nou."
+    share: 
+        request: 
+            no_twitter_connection: "Nu ai un cont de Twitter conectat. Conectează-ți contul în pagina de setări."
+            no_facebook_connection: "Nu ai un cont de Facebook conectat. Conectează-ți contul în pagina de setări. "
     google plus: "Google+"
     connect to: "Conectează-te la contul tău de %{connection}."
     deleted connection: "Conexiunea ta cu %{connection} a fost eliminată cu succes."
@@ -988,8 +992,7 @@ ro:
         h3: "YouVersion este global"
         h3 sub: "Disponibilă în peste %{language_count} limbi la nivel mondial."
         main: "Zeci de milioane de oameni folosesc Aplicația Biblia™ pentru a petrece timp cu Cuvântul Lui Dumnezeu. Descarcă aplicațiile gratuite și accesează-ți marcajele, notițele și planurile de citire oriunde te afli. Bucură-te de sute de versiuni, inclusiv audio, pe toate dispozitivele tale mobile."
-        button h4: "Accesează Bible.com/app"
-        button h4 sub: "Pe dispozitivul tău mobil"
+        button h4: "Accesează Bible.com/app<br>pe dispozitivul tău mobil"
         download now: "Descarcă Aplicația Biblia acum"
         what people: "Ce spun oamenii despre Aplicația Biblia gratuită..."
         t1: "Am Cuvântul mereu cu mine."
@@ -1001,6 +1004,7 @@ ro:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1084,10 +1088,12 @@ ro:
             tracker title: "Pe Urmele CRĂCIUNULUI"
             twitter text: "Urmărește o lume întreagă citind despre nașterea lui Isus. Distribuie Pe Urmele Crăciunului @YouVersion: https://www.bible.com/christmas"
             facebook text: "Distribuie Pe Urmele Crăciunului pe măsură ce oameni din întreaga lume citesc despre nașterea lui Isus.  La biserică sau acasă, lângă cei dragi sau într-un moment de singurătate, ne oprim să ne gândim la minunea dragostei lui Dumnezeu pentru noi."
+            summary: "Pe durata lunii decembrie 2014, așa am văzut lumea citind despre Nașterea lui Isus."
             verse: "<sup>10</sup> Dar îngerul le-a zis,<br>„Nu vă temeți. Vă aduc o veste bună, care va fi o mare bucurie pentru tot norodul. <sup>11</sup> Astăzi în cetetea lui David, vi s-a născut un Mântuitor; care este Hristos, Domnul.”"
             read more: "Citește uimitoarea poveste a Crăciunului"
             read about: "Lecturi despre Nașterea lui Isus"
             totals since: "Totalul YouVersion începând cu 1 decembrie 2014:"
+            totals during: "Totalurile YouVersion pe durata decembrie 2014:"
             total installs: "Numărul total de instalări pe smartphone-uri și tablete"
             download: "Descarcă gratuit aplicația Biblia"
             versions: "Peste %{version_count} versiuni în %{language_count} limbi"
