--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -150,6 +150,10 @@ sk:
     new note: "Vytvoriť poznámku"
     share success: "Vaša správa bola zdieľaná."
     share error: "Prepáčte, nepodarilo sa zdieľať vašu správu. Prosím, skúste znova."
+    share: 
+        request: 
+            no_twitter_connection: "Nemáte pripojený Twitter účet. Prosím, pripojte váš účet v nastaveniach."
+            no_facebook_connection: "Nemáte pripojený Facebook účet. Prosím, pripojte váš účet v nastaveniach."
     google plus: "Google+"
     connect to: "Pripojiť sa k účtu služby %{connection}"
     deleted connection: "Prepojenie so službou %{connection} bolo úspešne odstránené."
@@ -988,8 +992,7 @@ sk:
         h3: "YouVersion je globálne"
         h3 sub: "Dostupné vo viac ako %{language_count} jazykoch po celom svete."
         main: "Desiatky miliónov ľudí používajú aplikáciu Biblia s úmyslom, aby sa Božie Slovo stalo súčasťou ich každodenného života. Stiahnite si túto bezplatnú aplikáciu a získajte prístup k vašim záložkám a plánom čítania odvšadiaľ. Využite stovky prekladov vrátane audio nahrávok priamo na vašom mobilnom zariadení."
-        button h4: "Prejsť na Bible.com/app"
-        button h4 sub: "Na vašom mobilnom zariadení"
+        button h4: "Navštívte Bible.com/app<br>z vášho mobilného zariadenia"
         download now: "Stiahnite si aplikáciu Biblia teraz"
         what people: "Čo hovoria ľudia o našej bezplatnej aplikácii Biblia..."
         t1: "Vždy mám Slovo poruke."
@@ -1001,6 +1004,7 @@ sk:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1084,10 +1088,12 @@ sk:
             tracker title: "Sledovanie Vianočného príbehu"
             twitter text: "Sledujte ako svet číta o Ježišovom narodení. Zdieľajte Vianočný príbeh @YouVersion: https://www.bible.com/christmas"
             facebook text: "Zdieľajte sledovanie Vianočného príbehu s priateľmi z celého sveta a čítajte o Ježišovom narodení.  V cirkvi alebo doma, s milovanými ľuďmi alebo počas tichých chvíľ osamote, sa zastavíme a rozmýšľame nad zázrakom Božej lásky k nám."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10</sup> Ale anjel im povedal,<br>“Nebojte sa. Zvestujem vám veľkú radosť, ktorá bude patriť všetkým ľuďom: <sup>11</sup> Dnes sa vám v Dávidovom meste narodil Spasiteľ Kristus Pán.”"
             read more: "Prečítajte si úžasný príbeh o Vianociach"
             read about: "Čítanie o Ježišovom narodení"
             totals since: "Štatistika YouVersion od 1. decembra 2014:"
+            totals during: "Štatistika YouVersion počas decembra 2014:"
             total installs: "Inštalácií spolu na smartfónoch a tabletoch"
             download: "Stiahnite si zadarmo Aplikáciu Biblia"
             versions: "Vyše %{version_count} prekladov v %{language_count} jazykoch"
