--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -150,6 +150,10 @@ sw:
     new note: "noti mpya"
     share success: "Ujumbe wako umesambazwa."
     share error: "Samahani, kulikuwa na hitilafu katika usambazaji wa ujumbe wako. Tafadhali jaribu tena."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Ungana na akaunti yako ya %{connection}"
     deleted connection: "Umefanikiwa kuondoa uhusiano wako na %{connection}."
@@ -986,8 +990,7 @@ sw:
         h3: "YouVersion ni ya kimataifa"
         h3 sub: "Inapatikana kwenywe %{language_count}lugha duniani kote."
         main: "Mamilioni ya watu wanatumia App ya Bibilia ™ kufanya Neno la Mungu iwe sehemu ya maisha yao ya kila siku. Pakua programu ya bure na upate maelezo ya maalamisho yako, na mipango ya kusoma kutoka mahali popote. Furahia mamia ya matoleo, ikiwa pamoja na audio yote kwa rununu yako."
-        button h4: "Enda kwa. Bible.com/app"
-        button h4 sub: "kwenye rununu yako"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Pata programu ya bure ya Bibilia sasa hivi."
         what people: "Watu wanavyo ongelea kuhusu App ya bure ya Biblia..."
         t1: "Nina Neno kila wakati."
@@ -999,6 +1002,7 @@ sw:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ sw:
             tracker title: "Christmas Story Tracker"
             twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
             read more: "Read the amazing story of Christmas"
             read about: "Reading about the birth of Jesus"
             totals since: "YouVersion totals since December 1, 2014:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "Total installs on smartphones and tablets"
             download: "Download the free Bible App"
             versions: "Over %{version_count} versions in %{language_count} languages"
