--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -150,6 +150,10 @@ th:
     new note: "สร้างโน้ตใหม่"
     share success: "ข้อความของคุณได้ถูกแบ่งปัน"
     share error: "ขออภัย เกิดข้อผิดพลาดในการแบ่งปันข้อความ โปรดลองใหม่"
+    share: 
+        request: 
+            no_twitter_connection: "คุณยังไม่ได้เชื่อมต่อกับบัญชีสมาชิกของทวิตเตอร์ กรุณาเชื่อมต่อกับบัญชีของคุณในหน้าของการตั้งค่า"
+            no_facebook_connection: "คุณยังไม่ได้เชื่อมต่อกับบัญชีสมาชิกของเฟสบุ๊ค กรุณาเชื่อมต่อกับบัญชีของคุณในหน้าของการตั้งค่า"
     google plus: "กูเกิล+"
     connect to: "เชื่อมต่อไปยังบัญชี %{connection} ของคุณ"
     deleted connection: "เรานำการเชื่อมต่อของคุณกับ %{connection}. ออกเรียบร้อยแล้ว"
@@ -984,8 +988,7 @@ th:
         h3: "YouVersion นั้นใช้กันทั่วโลก"
         h3 sub: "มีให้บริการมากกว่า %{language_count} ภาษาจากทั่วทุกมุมโลก"
         main: "กว่าสิบล้านคนกำลังใช้แอพพระคัมภีร์™ เพื่อให้พระคำพระเจ้าเป็นส่วนหนึ่งในชีวิตประจำวัน ดาวน์โหลดแอพฟรี และเข้าถึงที่คั่นหน้า บันทึก และอ่านตามแผนการอ่านได้ทุกหนทุกแห่ง เพลิดเพลินกับพระคัมภีร์กว่าร้อยฉบับ รวมถึงพระคัมภีร์รูปแบบเสียง ทั้งหมดนี้บนโทรศัพท์มือถือของคุณ"
-        button h4: "ไปยัง Bible.com/app"
-        button h4 sub: "บนอุปกรณ์โทรศัพท์ของคุณ"
+        button h4: "ไปยัง Bible.com/app<br>บนโทรศัพท์ของคุณ"
         download now: "ดาวน์โหลดแอพพระคัมภีร์ฟรีเดี๋ยวนี้"
         what people: "นี่คือคำพูดจากผู้คนที่ใช้แอพพระคัมภีร์ฟรี..."
         t1: "ฉันมีพระคำพระเจ้าติดตัว"
@@ -997,6 +1000,7 @@ th:
         iphone ipad: "ไอโฟน/ไอแพด"
         android: "แอนดรอยด์"
         blackberry: "แบล็กเบอรี"
+        windows 8: "วินโดวส์ 8"
         windows phone: "วินโดว์ โฟน"
         hp palm: "เอชพี/ปาล์ม"
         java: "จาวา"
@@ -1080,10 +1084,12 @@ th:
             tracker title: "วันคริสต์มาส"
             twitter text: "มาดูกันว่าทั่วโลกได้อ่านเรื่องราวกับการกำเนิดของพระเยซู แบ่งปันเรื่องราววันคริสต์มาส @YouVersion: https://www.bible.com/christmas"
             facebook text: "แบ่งปันเรื่องราววันคริสต์มาสเหมือนอย่างผู้คนทั่วโลกที่ได้อ่านเรื่องราวการประสูติของพระเยซู  ในที่คริสตจักรหรือที่บ้าน กับผู้คนที่คุณรักหรือระหว่างช่วงเวลาที่อยู่คนเดียว และเราก็กำลังเป็นแสงสะท้อนถึงความยิ่งใหญ่ของพระเจ้าที่ทรงรักเรา"
+            summary: "ในระหว่างเดือนธันวาคม 2014 นี่คือสิ่งที่เราพบว่าคนทั่วโลกอ่านเรื่องราวเกี่ยวกับการประสูติของพระเยซู"
             verse: "<sup>10</sup> ฝ่ายทูตสวรรค์องค์นั้นกล่าวแก่เขาว่า <br>“อย่ากลัวเลย เพราะดูเถิด เรานำข่าวดีมายังท่านทั้งหลาย คือความปรีดียิ่งซึ่งจะมาถึงคนทั้งปวง <sup>11</sup> เพราะว่าในวันนี้พระผู้ช่วยให้รอดของท่านทั้งหลาย คือพระคริสต์เจ้า มาบังเกิดที่เมืองดาวิด”"
             read more: "อ่านเรื่องราวที่อัศจรรย์ของวันคริสต์มาส"
             read about: "อ่านเรื่องราวเกี่ยวกับการประสูติของพระเยซู"
             totals since: "จากการติดตามของ YouVersion ตั้งแต่วันที่ 1 ธันวาคม 2014:"
+            totals during: "จำนวนทั้งหมดบน YouVersion ระหว่างเดือนธันวาคม 2014:"
             total installs: "จำนวนการติดตั้งบนสมาร์ทโฟนและแท็บเล็ต"
             download: "ดาวน์โหลดแอพพระคัมภีร์ฟรี"
             versions: "มากกว่า %{version_count} เวอร์ชั่น ใน %{language_count} ภาษา"
