--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -150,6 +150,10 @@ tl:
     new note: "Lumikha ng Tala"
     share success: "Ang iyong mensahe ay nai-share na."
     share error: "Paumanhin, may pagkakamali sa pagshare ng iyong mensahe. Pakiulit po."
+    share: 
+        request: 
+            no_twitter_connection: "Ikaw ay walang nakaugnay na Twitter account. Paki-ugnay ang iyong account sa pahina ng mga setting."
+            no_facebook_connection: "Ikaw ay walang nakaugnay na Facebook account. Paki-ugnay ang iyong account sa pahina ng mga setting."
     google plus: "Google+"
     connect to: "Magkonek sa iyong account %{connection}"
     deleted connection: "Matagumpay na inalis ang koneksyon sa %{connection}."
@@ -986,8 +990,7 @@ tl:
         h3: "Ang YouVersion ay Pang-Buong Mundo"
         h3 sub: "Available sa mahigit %{language_count} na wika sa buong mundo."
         main: "Milyun-milyong tao na ang gumagamit ng  Bible App™ upang ang Salita ng Diyos ay maging bahagi ng kanilang pang-araw-araw na buhay.  I-download ang libreng app at i-access ang iyong bookmark, notes, at plano ng pagbasa kahit saan. Mag-enjoy sa daan-daang bersyon, kasama ang audio, sa lahat ng mobile na kagamitan."
-        button h4: "Pumunta sa Bible.com/app"
-        button h4 sub: "Sa Iyong Mobile na Kagamitan"
+        button h4: "Magtungo sa Bible.com/app<br/>sa iyong Mobile Device"
         download now: "I-download ang The Bible App Ngayon"
         what people: "Mula sa mga taong gumagamit na ng libreng Bible app..."
         t1: "Lagi akong may Bibliya."
@@ -999,6 +1002,7 @@ tl:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ tl:
             tracker title: "Christmas Story Tracker"
             twitter text: "Subaybayan ang mundong nagbabasa tungkol sa kapanganakan ni Hesus. Ibahagi ang Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Ibahagi ang Christmas Story Tracker kasabay nang pagbabasa ng mga tao tungkol sa kapanganakan ni Hesus.Sa simbahan at tahanan, kalapit ng ating mga mahal sa buhay o sa mga oras ng katahimikan na tayo'y nagiisa, tayo ay tumitigil sandali upang pagnilayan ang dakilang pag-ibig ng Diyos para sa atin."
+            summary: "Noong Disyembre 2014, ganito ang naging kaganapan kung paano nag-abang ang buong mundo sa kapanganakan ni Hesus."
             verse: "<sup>10</sup> Ngunit sinabi ng anghel sa kanila,<br>“Huwag kayong matakot. Ako ay may dalang mabuting balita na magdudulot ng dakilang kasiyahan sa buong sanlibutan. <sup>11</sup> Ngayon sa bayan ni David ang Tagapag-ligtas ay isinilang; Siya ang Mesias, ang Panginoon.”"
             read more: "Basahin ang kamangha-manghang kwento ng Pasko"
             read about: "Ang mga Nagbabasa tungkol sa Pagsilang ni Hesus"
             totals since: "Kabuuang bilang ng YouVersion mula December 1, 2014:"
+            totals during: "Ang kabuuang bilang ng YouVersion noong Disyembre 2014:"
             total installs: "Kabuuang install sa mga smartphone at tablet"
             download: "I-download ang libreng Bible App"
             versions: "Mahigit %{version_count} na salin sa %{language_count} na wika"
