--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -150,6 +150,10 @@ tr:
     new note: "Not Oluştur"
     share success: "İletiniz paylaşıldı."
     share error: "İletinizi paylaşmaya çalışırken bir hata oluştu. Lütfen tekrar deneyiniz."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "%{connection} hesabınıza bağlanın"
     deleted connection: "%{connection} ile bağlantınız başarıyla kapatılmıştır."
@@ -986,8 +990,7 @@ tr:
         h3: "YouVersion Globaldir"
         h3 sub: "%{language_count} ve daha birçok dil seçeneği mevcuttur."
         main: "On milyonlarca insan Kutsal Kitap Uygulaması'nı kullanıyor ve Tanrı'nın Sözü'nü hayatlarının bir parçası haline getiriyor. Uygulamayı bedavaya indirip her yerden yer imlerinize, notlarınıza ve okuma planlarınıza ulaşın. Mobil cihazınızı kullanarak Kutsal Kitap'ın yüzlerce çevirisini okuyun ve dinleyin."
-        button h4: "Bible.com/app adresine gidiniz"
-        button h4 sub: "Mobil Cihazınızda yukarıdaki adresi ziyaret edin"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Kutsal Kitap Uygulamasını Hemen İndirin"
         what people: "Kutsal Kitap Uygulaması hakkında ne diyorlar?"
         t1: "Kelam hep yanımda."
@@ -999,6 +1002,7 @@ tr:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ tr:
             tracker title: "Noel Hikayesini Okuyanlar"
             twitter text: "Dünya'da kaç kişinin İsa Mesih'in doğuşunun hikayesini okuduğunu takip edin. Noel Hikayesini Okuyanlar listesine katılın ve @YouVersion: https://www.bible.com/christmas linkini kullanarak paylaşın"
             facebook text: "Siz de, dünyanın her yanından İsa Mesih'in doğuşunun hikayesini okuyan diğerleri gibi, Noel Hikayesini Okuyanlar listesini paylaşın.  Kilisede veya evimizde, sevdiklerimizin yanında veya sessiz zamanlarımızda yalnızken, Tanrı'nın bize olan sevgisinin ne denli muhteşem olduğunu derinlemesine düşünmek üzere Tanrı'nın önünde sakince duralım."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10-11</sup> Melek onlara,<br>“Korkmayın!&quot; dedi. &quot;Size, bütün halkı sevindirecek bir haber müjdeliyorum: <sup></sup> Bugün size, Davut'un kentinde bir Kurtarıcı doğdu. Bu, Rab olan Mesih'tir.”"
             read more: "Noel'in hayret verici hikayesini okuyun"
             read about: "İsa Mesih'in doğuşunun hikayesini okumak"
             totals since: "1 Aralık 2014'ten itibaren YouVersion kullanıcıları:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "indirme yapıldı akıllı telefonlara ve tabletlere"
             download: "Bible (Kutsal Kitap) Uygulamasını <br/>Ücretsiz İndirin!"
             versions: "%{language_count} dilden fazla, %{version_count}kadarını aşkın tercümeyle"
