--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -150,6 +150,10 @@ uk:
     new note: "Нова нотатка"
     share success: "Повідомлення розіслано іншим."
     share error: "Вибачте, сталась помилка в розсиланні вашого повідомлення. Будь ласка спробуйте знову."
+    share: 
+        request: 
+            no_twitter_connection: "Ви не під'єднані до Twitter. Будь ласка, під'єднайте ваш акаунт на сторінці налаштувань."
+            no_facebook_connection: "Ви не під'єднані до Facebook. Будь ласка, під'єднайте ваш акаунт на сторінці налаштувань."
     google plus: "Google+"
     connect to: "Приєднати до Вашого облікового запису %{connection}"
     deleted connection: "Зв'язок з %{connection} успішно скасований."
@@ -990,8 +994,7 @@ uk:
         h3: "YouVersion є глобальною програмою"
         h3 sub: "Доступно на %{language_count} мов світу."
         main: "Десятки мільйонів людей використовують програму Біблія, щоб зробити Слово Боже частиною свого повсякденного життя. Завантажте безкоштовну програму, і отримаєте доступ до закладок, нотаток і планів читання з будь-якої точки світу. Насолоджуйтесь сотнями переказів, в тому числі аудіобіблією, - і все за допомогою свого мобільного пристрою."
-        button h4: "Перейти на Bible.com/app"
-        button h4 sub: "На Вашому мобільному телефоні"
+        button h4: "Перейдіть до Bible.com/app<br>на вашому мобільному пристрої"
         download now: "Завантажити програму Біблія зараз"
         what people: "Що говорять люди про безкоштовну програму Біблія…"
         t1: "У мене завжди є Слово."
@@ -1003,6 +1006,7 @@ uk:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1086,10 +1090,12 @@ uk:
             tracker title: "Різдвяна історія"
             twitter text: "Читай про народження Ісуса. Поділись Різдвяною Історією @YouVersion: https://www.bible.com/christmas"
             facebook text: "Поділіться Різдвяною Історією, щоб люди по всьому світі могли прочитати про народження Ісуса.  В церкві або вдома, серед людей, яких любимо, або наодинці, ми зупиняємось, щоб обміркувати чудо Божої любові до нас."
+            summary: "Протягом грудня 2014 це вказувало, як світ читає про народження Ісуса."
             verse: "<sup>10</sup> Та Ангол промовив до них:<br>“Не лякайтесь, бо я ось благовіщу вам радість велику, що станеться людям усім. <sup>11</sup> Бо сьогодні в Давидовім місті народився для вас Спаситель, Який є Христос Господь.&quot;"
             read more: "Прочитайте вражаючу історію Різдва"
             read about: "Читають про народження Ісуса на YouVersion"
             totals since: "Всього з 1 грудня 2014 року:"
+            totals during: "Підсумки YouVersion за грудень 2014 року:"
             total installs: "Всього встановлено на смартфони та планшети"
             download: "Завантажити програму Біблія безкоштовно"
             versions: "Більше %{version_count} версій на %{language_count} мовах"
