--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -150,6 +150,10 @@ vi:
     new note: "Tạo ghi chú mới"
     share success: "Thông điệp của bạn đã được chia sẻ."
     share error: "Xin lỗi bạn, có lỗi kỹ thuật khi chia sẻ thông điệp. Xin hãy thử lại."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Kết nối với tài khoản %{connection} của bạn"
     deleted connection: "Hủy bỏ thành công kết nối với %{connection}."
@@ -984,8 +988,7 @@ vi:
         h3: "YouVersion được phổ biến toàn cầu"
         h3 sub: "Hơn %{language_count} ngôn ngữ toàn cầu."
         main: "Hàng chục triệu người đang sử dụng App Kinh Thánh để Lời Chúa trở thành một phần trong cuộc sống hằng ngày của họ. Hãy tải ứng dụng miễn phí và truy cập các đánh dấu, ghi chú, và kế hoạch đọc Kinh Thánh của bạn từ bất cứ nơi đâu. Chọn lựa từ hàng trăm bản dịch, bao gồm Kinh Thánh phát thanh, tất cả chỉ trong thiết bị di động của bạn!"
-        button h4: "Vào Bible.com/vi/app"
-        button h4 sub: "Trên thiết bị di động của bạn"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Tải App Kinh Thánh bây giờ"
         what people: "Mọi người đang nói gì về App Kinh Thánh miễn phí..."
         t1: "Tôi luôn mang theo Lời Chúa."
@@ -997,6 +1000,7 @@ vi:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1080,10 +1084,12 @@ vi:
             tracker title: "Dõi Theo Câu Chuyện Giáng Sinh"
             twitter text: "Xem toàn thế giới đọc về sự giáng sinh của Chúa Jêsus. Chia sẻ trang \"Dõi Theo Câu Chuyện Giáng Sinh\" @YouVersion: https://www.bible.com/christmas"
             facebook text: "Chia sẻ câu chuyện Giáng Sinh để mọi người trên thế giới biết về sự giáng thế của Chúa Jêsus.  Ở Hội Thánh hoặc ở nhà, bên cạnh những người chúng ta yêu thương hoặc trong những khoảnh khắc yên tĩnh một mình, chúng ta ngừng lại để chiêm nghiệm tình yêu Chúa dành cho chúng ta thật tuyệt vời biết bao."
+            summary: "Hãy nhìn xem cả thế giới đã đọc về câu chuyện Giáng Sinh của Đức Chúa Jêsus như thế nào trong suốt tháng 12/2014!"
             verse: "<sup>10</sup> Nhưng thiên sứ bảo họ:<br>“Đừng sợ! Nầy, ta báo cho các ngươi một tin lành, đây sẽ là niềm vui lớn cho mọi người. <sup>11</sup> Vì hôm nay tại thành Đa-vít, một Đấng Cứu Thế, là Đấng Christ, là Chúa đã được sinh ra cho các ngươi.”"
             read more: "Đọc câu chuyện Giáng Sinh diệu kỳ"
             read about: "Đọc về sự giáng sinh của Chúa Jêsus"
             totals since: "trên YouVersion kể từ ngày 1 tháng 12, năm 2014:"
+            totals during: "Tổng số lượt đọc trên YouVersion tháng 12/2014:"
             total installs: "Tổng số cài đặt trên điện thoại thông minh và máy tính bảng"
             download: "Tải App Kinh Thánh miễn phí"
             versions: "Hơn %{version_count} bản dịch thuộc %{language_count} ngôn ngữ"
