--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -150,6 +150,10 @@ zh-CN:
     new note: "新建笔记"
     share success: "您的信息已经成功分享了。"
     share error: "抱歉！分享信息时出错！请重试！"
+    share: 
+        request: 
+            no_twitter_connection: "您没有连接的Twitter帐户。请在设置页面连接您的帐户。"
+            no_facebook_connection: "您没有连接的Facebook帐户。请在设置页面连接您的帐户。"
     google plus: "Google+"
     connect to: "连接到您的 %{connection} 账户"
     deleted connection: "已成功移除与 %{connection} 的关联"
@@ -984,8 +988,7 @@ zh-CN:
         h3: "YouVersion 是全球性的"
         h3 sub: "提供超过%{language_count}种语言给全世界。"
         main: "全世界上千万的用户都在每天使用这款圣经应用软件。下载这款免费的程序，它可以让你随时随地地使用您的书签，笔记以及读经计划等。有几百种不同版本圣经，包括语音版本的，供您在移动设备中选择。好好享用吧！"
-        button h4: "浏览 Bible.com/app"
-        button h4 sub: "在您的移动设备上"
+        button h4: "请在您的行动设备上访问Bible.com/app<br>"
         download now: "现在就下载圣经软件"
         what people: "人们是如何评说这款免费的圣经软件..."
         t1: "我随时随地都有神的话语。"
@@ -997,6 +1000,7 @@ zh-CN:
         iphone ipad: "iPhone/iPad"
         android: "安卓"
         blackberry: "黑莓手机"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1080,10 +1084,12 @@ zh-CN:
             tracker title: "圣诞故事阅读追踪"
             twitter text: "看看世界正在阅读耶稣的诞生。在YouVersion: https://www.bible.com/christmas分享圣诞故事的阅读追踪"
             facebook text: "世界各地的人都在阅读耶稣的诞生。请分享圣诞故事的阅读追踪。在教会里或在家里，与挚爱的人一起或者独处的时候，让我们静下来思考神对我们的爱是何等奇妙。"
+            summary: "在2014年的12月份里，这就是全世界在阅读着耶稣诞生故事的景象。"
             verse: "<sup>10</sup>那天使对他们说：<br>「不要惧怕！我报给你们大喜的信息，是关乎万民的；<sup>11</sup>因今天在大卫的城里，为你们生了救主，就是主基督。」"
             read more: "阅读奇妙的圣诞故事"
             read about: "阅读有关耶稣的诞生"
             totals since: "YouVersion自2014年12月1日以来的阅读次数："
+            totals during: "YouVersion于2014年12月的总阅读量:"
             total installs: "智能手机与平板电脑的总安装量"
             download: " 下载免费的圣经软件"
             versions: "超过%{version_count}个以%{language_count}种语言呈现的译本"
