--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -150,6 +150,10 @@ zh-TW:
     new note: "創建新筆記"
     share success: "您的信息已經成功分享了。"
     share error: "抱歉，信息分享出錯。請重試。"
+    share: 
+        request: 
+            no_twitter_connection: "您沒有連接的Twitter帳戶。請在設定頁面連接您的帳戶。"
+            no_facebook_connection: "您沒有連接的Facebook帳戶。請在設定頁面連接您的帳戶。"
     google plus: "Google+"
     connect to: "連接至您的 %{connection} 帳戶"
     deleted connection: "已成功地移除與 %{connection} 服務的連接。"
@@ -984,8 +988,7 @@ zh-TW:
         h3: "YouVersion 是全球性的"
         h3 sub: "提供超過 %{language_count} 種語言。"
         main: "數以千萬的人們透過聖經軟體來讓上帝的話語成為他們日常生活的一部份。請下載這個免費軟體然後隨時隨地存取您的書籤、筆記和讀經計劃。享受使用上百個聖經譯本，包括語音版，全部都在您的行動設備裡。"
-        button h4: "前往 Bible.com/app"
-        button h4 sub: "在您的行動設備上"
+        button h4: "請在您的行動設備上訪問Bible.com/app<br>"
         download now: "現在就下載聖經軟體"
         what people: "人們對於免費聖經軟體的看法..."
         t1: "我隨時隨地都有上帝的話語。"
@@ -997,6 +1000,7 @@ zh-TW:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "黑莓手機"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1080,10 +1084,12 @@ zh-TW:
             tracker title: "聖誕故事閱讀追蹤"
             twitter text: "看看世界正在閱讀耶穌的誕生。在YouVersion: https://www.bible.com/christmas分享聖誕故事的閱讀追踪"
             facebook text: "世界各地的人都在閱讀耶穌的誕生。請分享聖誕故事的閱讀追踪。在教會裡或在家裡，與摯愛的人一起或者獨處的時候，讓我們靜下來思考神對我們的愛是何等奇妙。"
+            summary: "在2014年的12月份裡，這就是全世界在閱讀著耶穌誕生故事的情景:"
             verse: "<sup>10</sup>那天使對他們說：<br>「不要懼怕！我報給你們大喜的信息，是關乎萬民的；<sup>11</sup>因今天在大衛的城裏，為你們生了救主，就是主基督。」"
             read more: "閱讀奇妙的聖誕故事"
             read about: "閱讀有關耶穌的誕生"
             totals since: "YouVersion自2014年12月1日以來的閱讀次數："
+            totals during: "YouVersion於2014年12月的總閱讀量:"
             total installs: "智慧型手機和平板電腦的總安裝"
             download: "下載免費的聖經軟體"
             versions: "超過%{version_count}個以%{language_count}種語言呈現的譯本"
