--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -150,6 +150,10 @@ bg:
     new note: "Нова бележка"
     share success: "Съобщението е споделено"
     share error: "Грешка в съобщението. Опитайте отново."
+    share: 
+        request: 
+            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
+            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
     google plus: "Google+"
     connect to: "Свържи се с твоя профил в %{connection}"
     deleted connection: "Успешно премахване на връзката ви през %{connection}."
@@ -986,8 +990,7 @@ bg:
         h3: "YouVersion е глобална"
         h3 sub: "Available in more than %{language_count} languages worldwide."
         main: "Десетки милиони хора изпозлват Библията™ като приложение правейки Божието слово част от тяхното ежедневие. Изтегли безплатното приложение и използвай своите бележки, маркировки и план от всяко място. Използвай стотици версии на Библията, както и аудио записи директно на мобилното си устроийство."
-        button h4: "Иди на Bible.com/app"
-        button h4 sub: "На мобилно устройство"
+        button h4: "Go to Bible.com/app<br>on your Mobile Device"
         download now: "Изтегли БИБЛИЯТА сега"
         what people: "Какво казват другите за Библията"
         t1: "Винаги имам Словото."
@@ -999,6 +1002,7 @@ bg:
         iphone ipad: "iPhone/iPad"
         android: "Андроид"
         blackberry: "Блекбери"
+        windows 8: "Windows 8"
         windows phone: "Телефон с Уиндоус"
         hp palm: "HP/Палм"
         java: "Джава"
@@ -1082,10 +1086,12 @@ bg:
             tracker title: "Christmas Story Tracker"
             twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            summary: "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
             verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
             read more: "Read the amazing story of Christmas"
             read about: "Reading about the birth of Jesus"
             totals since: "YouVersion totals since December 1, 2014:"
+            totals during: "YouVersion totals during December 2014:"
             total installs: "Total installs on smartphones and tablets"
             download: "Download the free Bible App"
             versions: "Over %{version_count} versions in %{language_count} languages"
