--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -150,6 +150,10 @@ cs:
     new note: "Nová poznámka"
     share success: "Vaše zpráva byla sdílena."
     share error: "Omlouváme, ve vaší zprávě se vyskytla chyba. Prosíme zkuste to znovu."
+    share: 
+        request: 
+            no_twitter_connection: "Nejste připojeni k účtu Twitter. Na stránce nastavení se prosím připojte."
+            no_facebook_connection: "Nejste připojeni k účtu Facebook. Na stránce nastavení se prosím připojte."
     google plus: "Google+"
     connect to: "Připojte se k vašemu %{connection} účtu"
     deleted connection: "Úspěšně odstraněno vaše spojení se službou %{connection}"
@@ -988,8 +992,7 @@ cs:
         h3: "YouVersion funguje globálně"
         h3 sub: "K dispozici ve více než %{language_count} světových jazycích."
         main: "Desítky milionů lidí používají aplikaci Bible™, aby z Bible udělali součást svého každodenního života. Stáhněte si bezplatnou aplikaci a získejte přístup k vašim záložkám, poznámkám a plánům čtení odkudkoli. Užívejte si stovky překladů včetně audio verzí, a to vše na vašem mobilním zařízení."
-        button h4: "Přejít na Bible.com/app"
-        button h4 sub: "Na vašem mobilním zařízení"
+        button h4: "Přejí na stránku Bible.com/app<br>v mobilním zařízení"
         download now: "Stáhněte si aplikaci Bible ihned"
         what people: "Co lidé říkají o bezplatné aplikaci Bible..."
         t1: "Vždycky mám Slovo."
@@ -1001,6 +1004,7 @@ cs:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1084,10 +1088,12 @@ cs:
             tracker title: "Po stopách vánočního příběhu"
             twitter text: "Sledujte svět, který čte příběh o narození Ježíše. Sdílejte \"Po stopách vánočního příběhu\" na @YouVersion: https://www.bible.com/christmas"
             facebook text: "Rozdělte se s vánočním příběhem o narození Ježíše, aby si jej lidé na celém světe mohli přečíst.  Ve společenství věřících nebo doma, s blízkými milými lidmi nebo během ztišení o samotě, se nyní zastavme nad zázrakem lásky, kterou nám projevil Bůh."
+            summary: "Tak to vypadalo v průběhu prosince 2014 se čtením příběhu o narození Ježíše."
             verse: "<sup>10</sup> Tedy řekl jim anděl: <br>“Nebojte se! Přináším vám dobrou zprávu, ze které se mohou radovat všichni lidé. <sup>11</sup> Dnes ve městě Davidově se vám narodil Zachránce; Kristus Pán.&quot;"
             read more: "Přečtěte si úchvatný vánoční příběh"
             read about: "Čtení o narození Ježíše Krista"
             totals since: "Celkem přečetlo v aplikaci Bible od 1. prosince 2014:"
+            totals during: "YouVersion čtení celkem v prosinci 2014:"
             total installs: "Instalací celkem na mobilních zařízeních."
             download: "Stáhněte si aplikaci Bible zdarma"
             versions: "Přes %{version_count} překladů v %{language_count} jazicích"
