--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -150,6 +150,10 @@ pt:
     new note: "Nova Anotação"
     share success: "Sua mensagem foi compartilhada."
     share error: "Desculpe, houve um erro ao compartilhar a sua mensagem. Por favor, tente novamente."
+    share: 
+        request: 
+            no_twitter_connection: "Voce não tem conta ativa de Facebook. Favor conectar através da pagina de configurações."
+            no_facebook_connection: "Voce não tem conta ativa de Facebook. Favor conectar através da página de configurações."
     google plus: "Google+"
     connect to: "Conectar à sua %{connection} conta"
     deleted connection: "Sua conexão foi removida com sucesso %{connection}."
@@ -986,8 +990,7 @@ pt:
         h3: "YouVersion é Global"
         h3 sub: "Disponível em mais de %{language_count}idiomas em todo mundo."
         main: "Dezenas de milhões de pessoas estão usando o Aplicativo da Bíblia™ para tornar a Palavra de Deus parte de suas vidas. Baixe o aplicativo gratuito e acesse os seus marcadores, anotações e planos de leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo em seu dispositivo móvel."
-        button h4: "Ir para Bible.com/app"
-        button h4 sub: "No Seu Dispositivo Móvel"
+        button h4: "Vá para Bible.com/app no dispositivo móvel"
         download now: "Baixar o Aplicativo da Bíblia Agora"
         what people: "O que as pessoas estão dizendo sobre o aplicativo gratuito da Bíblia..."
         t1: "Eu tenho sempre a Palavra."
@@ -999,6 +1002,7 @@ pt:
         iphone ipad: "iPhone/iPad"
         android: "Android"
         blackberry: "BlackBerry"
+        windows 8: "Windows 8"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
@@ -1082,10 +1086,12 @@ pt:
             tracker title: "História do Natal"
             twitter text: "Veja o mundo lendo sobre o nascimento de Jesus. Compartilhe a História do Natal @YouVersion:https://www.bible.com/christmas"
             facebook text: "Compartilhe a História do Natal com as pessoas ao redor do mundo enquanto lemos sobre o nascimento de Jesus.  Na igreja ou em casa, perto das pessoas que amamos ou durante um momento a sós, paremos para refletir sobre o maravilhoso amor de Deus por nós."
+            summary: "Durante Dezembro de 2014, assim parecia o mundo ao ler sobre o nascimento de Jesus."
             verse: "<sup>10</sup> Mas o anjo disse:<br>— “Não tenham medo!  Estou aqui a fim de trazer uma boa notícia para vocês, e ela será motivo de grande alegria também para todo o povo! <sup>11</sup> Hoje mesmo, na cidade de Davi, nasceu o Salvador de vocês — o Messias, o Senhor!”"
             read more: "Leia a incrível história do Natal"
             read about: "Pessoas lendo sobre o nascimento de Jesus"
             totals since: "Números totais do YouVersion desde 1 de Dezembro de 2014"
+            totals during: "Totais YouVersion durante Dezembro de 2014:"
             total installs: "Total de instalações em smartphones e tablets"
             download: "Baixe grátis o App da Bíblia"
             versions: "Mais de %{version_count} versões em %{language_count}idiomas"
